--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Domestic_l_english.yml
@@ -78,37 +78,37 @@ rusd.14.t:0 "총파업이 확대되다"
 rusd.14.d:0 "다른 공장의 노동자들이 파업에 참가하고 있습니다. 사태가 최악으로 치닫고 있습니다."
 rusd.14.a:0 "우리는 최악에 대비해야 한다!"
 
-rusd.15.t:0 "Clashes with the Workers"
-rusd.15.d:0 "Workers from other factories have joined the general strike. The situation is on the brink of eruption."
-rusd.15.a:0 "Send in the army!"
+rusd.15.t:0 "노동자들과의 충돌"
+rusd.15.d:0 "다른 공장의 노동자들이 파업에 참가하고 있습니다. 사태가 폭발 직전입니다."
+rusd.15.a:0 "군대를 보내라!"
 
-rusd.16.t:0 "Clashes in Tsaritsyn"
-rusd.16.d:0 "Workers in Tsaritsyn have organised a militia and have attacked our troops!"
-rusd.16.a:0 "Damn!"
+rusd.16.t:0 "차리친에서의 충돌"
+rusd.16.d:0 "차리친의 노동자들이 민병대를 조직해 군대를 공격했습니다!"
+rusd.16.a:0 "젠장!"
 
-rusd.17.t:0 "Clashes in Moskva"
-rusd.17.d:0 "Workers in Moskva have organised a militia and have attacked our troops!"
+rusd.17.t:0 "모스크바에서의 충돌"
+rusd.17.d:0 "모스크바의 노동자들이 민병대를 조직해 군대를 공격했습니다!"
 
-rusd.18.t:0 "Clashes in Petrograd"
-rusd.18.d:0 "Workers in Petrograd have organised a militia and have attacked our troops!"
+rusd.18.t:0 "페트로그라드에서의 충돌"
+rusd.18.d:0 "페트로그라드의 노동자들이 민병대를 조직해 군대를 공격했습니다!"
 
-rusd.19.t:0 "Clashes in Kiev"
-rusd.19.d:0 "Workers in Kiev have organised a militia and have attacked our troops!"
+rusd.19.t:0 "키예프에서의 충돌"
+rusd.19.d:0 "키예프의 노동자들이 민병대를 조직해 군대를 공격했습니다!"
 
-rusd.20.t:0 "Clashes in Kharkov"
-rusd.20.d:0 "Workers in Kharkov have organised a militia and have attacked our troops!"
+rusd.20.t:0 "하리코프에서의 충돌"
+rusd.20.d:0 "하리코프의 노동자들이 민병대를 조직해 군대를 공격했습니다!"
 
-rusd.21.t:0 "Clashes in Minsk"
-rusd.21.d:0 "Workers in Minsk have organised a militia and have attacked our troops!"
+rusd.21.t:0 "민스크에서의 충돌"
+rusd.21.d:0 "민스크의 노동자들이 민병대를 조직해 군대를 공격했습니다!"
 
-rusd.22.t:0 "Clashes in Vladivostok"
-rusd.22.d:0 "Workers in Vladivostok have organised a militia and have attacked our troops!"
+rusd.22.t:0 "블라디보스토크에서의 충돌"
+rusd.22.d:0 "블라디보스토크의 노동자들이 민병대를 조직해 군대를 공격했습니다!"
 
-rusd.23.t:0 "Clashes in Vilna"
-rusd.23.d:0 "Workers in Vilna have organised a militia and have attacked our troops!"
+rusd.23.t:0 "빌나에서의 충돌"
+rusd.23.d:0 "빌나의 노동자들이 민병대를 조직해 군대를 공격했습니다!"
 
-rusd.24.t:0 "Clashes in Riga"
-rusd.24.d:0 "Workers in Riga have organised a militia and have attacked our troops!"
+rusd.24.t:0 "리가에서의 충돌"
+rusd.24.d:0 "리가의 노동자들이 민병대를 조직해 군대를 공격했습니다!"
 
 rusd.25.t:0 "Clashes in Revel"
 rusd.25.d:0 "Workers in Revel have organised a militia and have attacked our troops!"
