--- a/Kaiserreich Korean Translation/localisation/KR_Scandinavia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Scandinavia_l_english.yml
@@ -1,132 +1,132 @@
 ﻿l_english:
 
 ### Opinion Modifiers ###
-SCA_nordic_friendship:0 "Nordic Friendship"
-SCA_nordic_irredentism:0 "Nordic Irredentism"
-SCA_claims_on_schleswig:0 "Northern Schleswig Dispute"
+SCA_nordic_friendship:0 "북유럽 국가 친선"
+SCA_nordic_irredentism:0 "북유럽 민족 통일 운동"
+SCA_claims_on_schleswig:0 "북부 슐레스비히 분쟁"
 
 ### Research Group ###
-scandinavian_research_name:0 "Scandinavian Scientist Conference"
-scandinavian_research_desc:0 "The Scandinavian Scientist Conference is an organisation devoted to scientific cooperation between the Scandinavian states."
+scandinavian_research_name:0 "스칸디나비아 과학자 협회"
+scandinavian_research_desc:0 "스칸디나비아 과학자 협회는 스칸디나비아 국가들 사이의 과학적 협력을 전문으로 하는 기관입니다."
 
 ### Flags ###
-SCA_treaty_of_stockholm:0 "The Treaty of Stockholm"
-SCA_nordic_council:0 "Founded the Nordic Council"
-SCA_defense_union:0 "Established the Scandinavian Defence Union"
-SCA_passport_union:0 "Signed the Nordic Passport Convention"
-SCA_monetary_union:0 "Reestablished the Scandinavian Monetary Union"
-SCA_custom_union:0 "Founded a Single Nordic Market"
-SCA_research_cooperation:0 "Scandinavian Science Cooperation"
+SCA_treaty_of_stockholm:0 "스톡홀름 조약"
+SCA_nordic_council:0 "북유럽 의회 설립"
+SCA_defense_union:0 "스칸디나비아 방위 연합체 결성"
+SCA_passport_union:0 "북유럽 비자 협정에 서명"
+SCA_monetary_union:0 "스칸디나비아 화폐 동맹 재결성"
+SCA_custom_union:0 "단일 북유럽 시장을 구축하다"
+SCA_research_cooperation:0 "스칸디나비아 과학 협력"
 
-SCA_mobile_warfare_flag:0 "Mobile Warfare"
-SCA_superior_firepower_flag:0 "Superior Firepower"
-SCA_grand_battleplan_flag:0 "Grand Battleplan"
+SCA_mobile_warfare_flag:0 "기동전"
+SCA_superior_firepower_flag:0 "화력 우세"
+SCA_grand_battleplan_flag:0 "대전략"
 
 ### Ideas ###
-SCA_federal_army_idea:0 "Federal Army Organisation"
-SCA_national_armies_idea:0 "National Army Organisation"
-SCA_tank_forces_idea:0 "Mobile Warfare"
-SCA_superior_firepower_idea_1:0 "Superior Firepower"
-SCA_superior_firepower_idea_2:0 "Superior Firepower"
-SCA_defensive_planning_idea:0 "Defensive Planning"
+SCA_federal_army_idea:0 "연방 육군을 조직하다"
+SCA_national_armies_idea:0 "국민군을 조직하다"
+SCA_tank_forces_idea:0 "기동전"
+SCA_superior_firepower_idea_1:0 "화력 우세"
+SCA_superior_firepower_idea_2:0 "화력 우세"
+SCA_defensive_planning_idea:0 "방어전 계획"
 
 ### Parties ###
 SCA_totalist_party:0 "NTF"
-SCA_totalist_party_long:0 "Nordic Totalist Federation"
+SCA_totalist_party_long:0 "북유럽 전체주의자 연합"
 SCA_syndicalist_party:0 "NSL"
-SCA_syndicalist_party_long:0 "Nordic Syndicalist League"
+SCA_syndicalist_party_long:0 "북유럽 생디칼리스트 연맹"
 SCA_radical_socialist_party:0 "SWP"
-SCA_radical_socialist_party_long:0 "Socialist Workers Party"
+SCA_radical_socialist_party_long:0 "사회노동당"
 SCA_social_democrat_party:0 "NSDP"
-SCA_social_democrat_party_long:0 "Nordic Social Democratic Party"
-SCA_social_liberal_party:0 "Liberals"
-SCA_social_liberal_party_long:0 "Liberals"
-SCA_market_liberal_party:0 "Conservative Party"
-SCA_market_liberal_party_long:0 "Conservative Party"
-SCA_social_conservative_party:0 "Farmers' League"
-SCA_social_conservative_party_long:0 "Farmers' League"
+SCA_social_democrat_party_long:0 "북유럽 사회민주당"
+SCA_social_liberal_party:0 "자유당"
+SCA_social_liberal_party_long:0 "자유당"
+SCA_market_liberal_party:0 "보수당"
+SCA_market_liberal_party_long:0 "보수당"
+SCA_social_conservative_party:0 "농업자 연맹"
+SCA_social_conservative_party_long:0 "농업자 연맹"
 SCA_authoritarian_democrat_party:0 "SPP"
-SCA_authoritarian_democrat_party_long:0 "Scandinavian Peoples Party"
-SCA_paternal_autocrat_party:0 "Union Party"
-SCA_paternal_autocrat_party_long:0 "Union Party"
-SCA_national_populist_party:0 "Nationalist Front"
-SCA_national_populist_party_long:0 "Nationalist Front"
+SCA_authoritarian_democrat_party_long:0 "스칸디나비아 국민당"
+SCA_paternal_autocrat_party:0 "연합당"
+SCA_paternal_autocrat_party_long:0 "연합당"
+SCA_national_populist_party:0 "민족주의 전선"
+SCA_national_populist_party_long:0 "민족주의 전선"
 
 ### Focus Tree ###
 
-SCA_industry_1:0 "Industrial R&D"
-SCA_civilian_industry:0 "Civilian Industries"
-SCA_weapons_industry:0 "Military Industries"
-SCA_more_resources:0 "Northern Riches"
+SCA_industry_1:0 "산업 연구 및 개발"
+SCA_civilian_industry:0 "민간 산업"
+SCA_weapons_industry:0 "군수 산업"
+SCA_more_resources:0 "북유럽의 부유함"
 
-SCA_federal_army:0 "Federal Army Reform"
-SCA_national_armies:0 "Keep the National Armies"
-SCA_mobile_warfare:0 "Jung:\n Mobile Warfare"
-SCA_new_tanks:0 "New Tanks"
-SCA_superior_firepower:0 "Fleischer:\n Superior Firepower"
-SCA_modern_equipment:0 "Modern Equipment"
-SCA_grand_battleplan:0 "Prior:\n Grand Battleplan"
-SCA_high_command:0 "Supreme High Command"
+SCA_federal_army:0 "연방 육군 개혁"
+SCA_national_armies:0 "국민군 유지"
+SCA_mobile_warfare:0 "Jung:\n 기동전"
+SCA_new_tanks:0 "새로운 전차"
+SCA_superior_firepower:0 "Fleischer:\n 화력 우세"
+SCA_modern_equipment:0 "현대 장비"
+SCA_grand_battleplan:0 "Prior:\n 대전략"
+SCA_high_command:0 "최고 사령부"
 
-SCA_blue_water_navy:0 "Atlantic Focus:\n Blue Water Navy"
-SCA_green_water_navy:0 "Baltic Focus:\n Green Water Navy"
-SCA_cruiser_effort:0 "Cruiser Development"
-SCA_capital_ships:0 "Modern Capital Ships"
-SCA_destroyer_effort:0 "Destroyer Development"
-SCA_u_boat_effort:0 "U-Boat Veterans"
+SCA_blue_water_navy:0 "대서양에 주력:\n Blue Water Navy"
+SCA_green_water_navy:0 "발트해에 주력:\n Green Water Navy"
+SCA_cruiser_effort:0 "순양함 개발"
+SCA_capital_ships:0 "현대 주력함"
+SCA_destroyer_effort:0 "구축함 개발"
+SCA_u_boat_effort:0 "잠수함 숙련"
 
-SCA_fighter_focus:0 "SAAB Fighters"
-SCA_CAS_focus:0 "Death From Above"
-SCA_NAV_focus:0 "New Torpedo Bombers"
-SCA_rocketry:0 "Andøya Rocket Field"
+SCA_fighter_focus:0 "사브 전투기"
+SCA_CAS_focus:0 "하늘에서 내려오는 죽음"
+SCA_NAV_focus:0 "새로운 뇌격기"
+SCA_rocketry:0 "안되위야 로켓 발사장"
 
-SCA_foreign_affairs:0 "Nordic Foreign Affairs"
-SCA_schleswig_question:0 "The Schleswig Question"
-SCA_claim_northern_schleswig:0 "Claim Northern Schleswig"
-SCA_demand_northern_schleswig:0 "Demand Northern Schleswig"
-SCA_liberate_schleswig_holstein:0 "Liberate Schleswig-Holstein"
-SCA_finnish_question:0 "The Finnish Question"
-SCA_antagonise_finland:0 "Antagonise Finland"
-SCA_aland_crisis:0 "The Second Åland Crisis"
-SCA_liberate_finland:0 "Liberate Finland"
-SCA_integrate_puppet_finland:0 "Integrate Our Subject"
-SCA_befriend_finland:0 "Befriend Finland"
-SCA_finnish_trade:0 "Northern Trade"
-SCA_finland_alliance:0 "An Arctic Defense Treaty?"
-SCA_integrate_free_finland:0 "Federate With Finland"
-SCA_military_cooperation:0 "The Alliance Question"
-SCA_join_entente:0 "Join The Entente"
-SCA_regain_greenland:0 "The Return Of Our Islands"
-SCA_join_isac:0 "Join ISAC"
-SCA_nordic_alliance:0 "A Nordic Alliance"
-SCA_baltic_focus:0 "Eastern Focus"
-SCA_baltic_goals:0 "Announce Our Eastern Ambitions"
-SCA_atlantic_focus:0 "Atlantic Focus"
-SCA_ally_russia:0 "An Alliance With Russia"
-SCA_petrograd_agreement:0 "The Treaty Of Petrograd"
-SCA_russian_aid:0 "Aid From Russia"
-SCA_atlantic_goals:0 "Announce Our Atlantic Ambitions"
-SCA_retake_the_islands:0 "Retake The North Atlantic Possessions"
-SCA_take_orkney:0 "The Conquest Of The Northern Islands"
-SCA_push_finnish_claims:0 "Push Finnish Claims"
-SCA_baltic_conquest:0 "The Conquest Of The Baltics"
-SCA_baltic_liberation:0 "Liberate The Baltic States"
-SCA_karelian_conquest:0 "The Conquest Of Karelia"
-SCA_karelian_liberation:0 "Liberate Karelia"
+SCA_foreign_affairs:0 "북유럽 외무부"
+SCA_schleswig_question:0 "슐레스비히 문제"
+SCA_claim_northern_schleswig:0 "북부 슐레스비히 요구"
+SCA_demand_northern_schleswig:0 "북부 슐레스비히 요청"
+SCA_liberate_schleswig_holstein:0 "슐레스비히-홀슈타인 해방"
+SCA_finnish_question:0 "핀란드 문제"
+SCA_antagonise_finland:0 "핀란드와 대립하다"
+SCA_aland_crisis:0 "제 2차 올란드 위기"
+SCA_liberate_finland:0 "핀란드 해방"
+SCA_integrate_puppet_finland:0 "주체 통합"
+SCA_befriend_finland:0 "핀란드와의 친선"
+SCA_finnish_trade:0 "북유럽 무역"
+SCA_finland_alliance:0 "북극해 방위 조약?"
+SCA_integrate_free_finland:0 "핀란드와 연합하다"
+SCA_military_cooperation:0 "동맹 문제"
+SCA_join_entente:0 "협상국 가입"
+SCA_regain_greenland:0 "우리 섬의 반환"
+SCA_join_isac:0 "ISAC에 가입"
+SCA_nordic_alliance:0 "북유럽 동맹"
+SCA_baltic_focus:0 "동방에 주력"
+SCA_baltic_goals:0 "동방에 대한 야심을 밝히다"
+SCA_atlantic_focus:0 "대서양에 주력"
+SCA_ally_russia:0 "러시아와의 동맹"
+SCA_petrograd_agreement:0 "페트로그라드 조약"
+SCA_russian_aid:0 "러시아의 원조"
+SCA_atlantic_goals:0 "대서양에 대한 야심을 밝히다"
+SCA_retake_the_islands:0 "북유럽 영토 회복"
+SCA_take_orkney:0 "북부 제도 정복"
+SCA_push_finnish_claims:0 "핀란드 요구를 밀어붙이다"
+SCA_baltic_conquest:0 "발트 해 정복"
+SCA_baltic_liberation:0 "발트 국가 해방"
+SCA_karelian_conquest:0 "카렐리야 정복"
+SCA_karelian_liberation:0 "카렐리야 해방"
 
-SCA_domestic_finland:0 "Support Finnish Industries"
+SCA_domestic_finland:0 "핀란드 산업 지원"
 
 ### Events ###
 
-scandinavia.1.t:0 "The Formation of the Nordic Federation"
-scandinavia.1.d:0 "After the signing of the Scandinavian Treaty, a caretaker government has been left in place until we can hold a snap election.\n §RThe Nordic Federation is not complete. The focus tree is only a placeholder and will be expanded upon for 0.6§!"
-scandinavia.1.a:0 "Prepare the Federal Election"
+scandinavia.1.t:0 "북유럽 연방의 형성"
+scandinavia.1.d:0 "스칸디나비아 조약에 서명한 후에, 각국 정부는 우리의 통합 정부 구성이 끝날 때까지 임시로 유지되어 왔습니다.\n §R북유럽 연방은 완전하지 못합니다. The focus tree is only a placeholder and will be expanded upon for 0.6§!"
+scandinavia.1.a:0 "연방 선거를 준비하라"
 
-scandinavia.2.t:0 "The First Federal Election"
-scandinavia.2.d:0 "We are ready to conduct our first federal election. This parliament is provisional and will only last until we can elect a more permanent assembly at a later date. While there are several smaller parties on the ballot, there are three that can realistically win the election. The Nordic Social Democratic Party is campaigning on the issue of public welfare and would like to keep the status quo in regards to federal and international affairs. The Conservative Party is promising to cut taxes and increase military spending. They are also in favour of maintaining the current status of the federation. Lastly, the Scandinavian Peoples Party is a mixture of politicians and ideas, only united by their common dedication to Scandinavism. They wish to increase the power of the federation and conduct an active foreign policy to unite all Scandinavians in a single state. Who will win?"
-scandinavia.2.a:0 "NSDP - The Social Democrats"
-scandinavia.2.b:0 "CP - The Market Liberals"
-scandinavia.2.c:0 "SPP - The Pan-Scandinavianists"
+scandinavia.2.t:0 "제 1차 연방 선거"
+scandinavia.2.d:0 "우리의 첫번째 연방 선거를 치를 준비가 되었습니다. 이번 국회는 임시적인 것으로 차후에 더 안정적인 국회를 선출할 때까지만 지속될 것입니다. 여러 개의 작은 정당들이 선거에 출마했지만, 세 정당이 현실적으로 선거에서 승산이 있습니다. 북유럽 사회 민주당은 공공 복지 개선 운동을 벌이고 있으며 연방의 정치/체계와 외교 문제에 관해서는 현상 유지를 원하고 있습니다. 보수당은 세금을 줄이고 군비를 확충하겠다고 약속했습니다. 그들 또한 연방의 현재 상태를 유지하는 것에 동의합니다. 마지막으로 스칸디나비아 국민당은 여러 성향의 정치인들이 연합한 것으로, 범-스칸디나비아주의에 대한 그들의 공통적인 의견에 의해서 결합되었습니다. 그들은 연방의 위상을 드높이고 모든 스칸디나비아인들을 하나의 국민으로 통합시키기 위해 적극까?"
+scandinavia.2.a:0 "NSDP - 사회민주주의"
+scandinavia.2.b:0 "CP - 시장자유주의"
+scandinavia.2.c:0 "SPP - 범-스칸디나비아주의"
 
 scandinavia.3.t:0 "The [GetYear] Federal Election"
 scandinavia.3.d:0 "The time has come to elect a federal parliament to serve for a full four year term. Who will win?"
