--- a/Kaiserreich Korean Translation/localisation/KR_Scandinavia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Scandinavia_l_english.yml
@@ -57,7 +57,7 @@ SCA_national_populist_party_long:0 "민족주의 전선"
 SCA_industry_1:0 "산업 연구 및 개발"
 SCA_civilian_industry:0 "민간 산업"
 SCA_weapons_industry:0 "군수 산업"
-SCA_more_resources:0 "북유럽의 부유함"
+SCA_more_resources:0 "북방의 부유함"
 
 SCA_federal_army:0 "연방 육군 개혁"
 SCA_national_armies:0 "국민군 유지"
