--- a/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
@@ -3,7 +3,7 @@ l_english:
 ### Loading Messages ###
 LOADING_GUI:0 "명예로운 평화에 서명하는 중"
 #"Loading GUI"
-LOADING_HISTORY:0 "트로츠키를 숨기는 중"
+LOADING_HISTORY:0 "트로츠키를 은둔시키는 중"
 #"Loading History"
 LOADING_SAVEGAME:0 "역사를 다시 쓰는 중: $NAME$"
 #"Loading savegame: $NAME$"
@@ -57,7 +57,7 @@ GENERATING_GRADIENT_BORDERS:0 "혁명을 배반하는 중"
 
 ### Difficulty ### 
 custom_diff_strong_ger:0 "독일 제국 강화"
-custom_diff_strong_frasri:0 "인터네셔널 강화"
+custom_diff_strong_frasri:0 "인터내셔널 강화"
 custom_diff_strong_eng:0 "브리튼 연방 강화"
 custom_diff_strong_can:0 "캐나다 강화"
 custom_diff_strong_rus:0 "러시아 강화"
@@ -70,8 +70,8 @@ custom_diff_strong_jap:0 "일본 강화"
 custom_diff_strong_qie:0 "청나라 강화"
 
 ### Autonomy ###
-autonomy_colony:1 "자치 괴뢰국"
-autonomy_dominion:1 "자치 종속국"
+autonomy_colony:1 "식민지"
+autonomy_dominion:1 "자치령"
 
 ### Land Units ###
 garrison:0 "주둔군"
@@ -92,7 +92,7 @@ sec_cannot_be_replaced:0 "내무부 장관 재임명 불가"
 ministers_cannot_be_replaced:0 "장관 재임명 불가"
 
 ### Factions ###
-Mittelmacht:0 "중앙유럽공동체"
+Mittelmacht:0 "미틀마흐트"
 Entente:0 "협상국"
 Belgrade_Pact:0 "베오그라드 조약 기구"
 Third_International:0 "제 3인터내셔널"
@@ -103,30 +103,30 @@ Mediterranean_Bloc:0 "지중해 연합"
 ### Name and Description ###
 BM_HISTORY_TITLE:0 "역사 되짚어보기"
 KR_SCENARIO_NAME:0 "세계 대전의 유산"
-KR_SCENARIO_DESC:0 "1936년은 세계사의 전환점이 될 것입니다. 거대한 기회와 위험이 다가오는 때입니다. 독일 제국과 프랑스 코뮌 사이의 긴장이 거세지고 있습니다. 러시아와 미합중국은 내부적으로 불안정해지고 있으며 쇠락한 제국 오스트리아와 오스만은 쇠퇴하고 있습니다. 한편 노동조합주의, 전체주의 그리고 급진사회주의는 전 세계에 뿌리내리고 있습니다. 세계 대전 종전 후 15년. 옛 적국들이 고개를 들고 있습니다. 단 하나의 불씨가 이 화약고를 폭발시키고 말 것입니다..."
+KR_SCENARIO_DESC:0 "1936년은 세계사의 전환점이 될 것입니다. 거대한 기회인 동시에 위협이 다가오는 때입니다. 독일 제국과 프랑스 코뮌 사이의 긴장감이 거세지고 있습니다. 러시아와 미합중국은 내분의 조짐이 나타나고 있으며 쇠락한 제국 오스트리아와 오스만은 쇠퇴하고 있습니다. 한편 노동조합주의, 전체주의 그리고 급진사회주의는 전 세계에 뿌리내리고 있습니다. 세계 대전 종전 후 15년. 옛 적국들이 다시 고개를 들고 있습니다. 단 하나의 불씨만으로도 이 화약고는 폭발하게 될 것입니다..."
 
 ### Major Nations ###
 
 ### Germany ###
-GER_KR_GATHERING_STORM_DESC:0 "1919년, 5년의 전쟁 끝에 독일군은 프랑스에서 협상국의 방어선을 무너뜨렸습니다. 그리고 1921년, 영국의 항복이 뒤따랐습니다. 대전쟁은 독일을 유일무이한 강대국으로 만들어 주었지만, 1930년대 이후로 독일은 내리막길을 걷고 있습니다. 후퇴하는 세계 경제로 인해 독일의 산업 생산량이 약화된 반면 다른 국가들의 제조업은 회복했고, 독일의 동부 위성국들에서는 민족주의가 자라나 제국에서 떠나가려고 하고 있습니다. 1936년, 독일은 갈림길에 서있고, 우리는 과거의 적들이 예전의 힘을 되찾는 동안 강대한 제국이 이미 금이 나고 있는 것을 볼 수 있습니다..."
+GER_KR_GATHERING_STORM_DESC:0 "1919년, 5년의 전쟁 끝에 독일군은 프랑스에서 협상국의 방어선을 무너뜨렸습니다. 그리고 1921년, 영국의 항복이 뒤따랐습니다. 대전쟁은 독일을 유일무이한 강대국으로 만들어 주었지만, 1930년대 이후로 독일은 내리막길을 걷고 있습니다. 후퇴하는 세계 경제로 인해 독일의 산업력이 약화된 반면 다른 국가들의 제조업은 회복되었고, 독일의 동부 위성국들에서는 민족주의가 퍼져 제국에서 떠나가기를 원하고 있습니다. 1936년, 독일은 갈림길에 서있고, 우리는 과거의 적들이 예전의 힘을 되찾는 동안 강대한 제국이 이미 금이 가고 있는 것을 보았습니다..."
 
 ### Austria ###
 AUS_KR_GATHERING_STORM_DESC:0 "'분리되지도 나누어지지도 않는다' - 대전쟁의 여파는 이중제국이 그렇지 않다는 것을 입증했습니다. 승리했음에도 불구하고, 전쟁은 제국 내의 문화, 계급 그리고 이념의 분열을 드러내었고 전쟁이 끝나고도 내부의 불안은 계속되었습니다. 카를 황제는 다민족 제국이 20세기에서도 살아남을 수 있도록 개혁하기 위해 노력했고 일련의 대규모 개혁들을 실시했습니다. 하지만, 그의 개혁은 제국의 헝가리 측을 배제했었고 일리리아 반란으로 인한 위기는 양 측간의 긴장만을 조장했습니다. 오스트리아가 제국을 유지할 수 있을지 시간이 지나면 알게 될 것입니다..."
 
 ### Commune of France ###
-FRA_KR_GATHERING_STORM_DESC:0 "제3 공화국은 자신이 시작된 것과 같은 방식으로 끝났습니다: 독일군에게 패배했고, 본국에서 혁명을 맞이했습니다. 1919년, CGT에 의해 시작된 총파업은 부르주아 정부의 몰락을 초래했습니다. 15년 동안, 새로운 '프랑스 코뮌'은 공안위원회를 비롯한 생디칼리즘-사회주의 사이의 합의의 발판 위에서 단결할 수 있었습니다. 하지만, 1936년, 국가를 재건하고 혁명을 수호해야할 필요성은 많은 비판자들에게 낡아빠진 것으로 여겨지고 있고 보다 급진적인 정책에 대한 요구가 커지고 있습니다. 프랑스는 자신의 사명에 확신을 가지고 있지만, 앞으로 어떤 혁명 분파가 권력을 장악할 지는 불분명합니다..."
+FRA_KR_GATHERING_STORM_DESC:0 "제3 공화국은 자신이 시작된 것과 같은 방식으로 끝났습니다: 독일군에게 패배했고, 본국에서 혁명을 맞이했습니다. 1919년, CGT에 의해 시작된 총파업은 부르주아 정부의 몰락을 초래했습니다. 15년 동안, 새로운 '프랑스 코뮌'은 공안위원회를 비롯한 생디칼리즘-사회주의 사이의 합의의 발판 위에서 단결할 수 있었습니다. 하지만 1936년, 국가를 재건하고 혁명을 수호해야할 필요성은 많은 비판자들에게 낡아빠진 것으로 여겨지고 있고 보다 급진적인 정책에 대한 요구가 커지고 있습니다. 프랑스는 자신의 사명에 확신을 가지고 있지만, 앞으로 어떤 혁명 분파가 권력을 장악할 지는 불분명합니다..."
 
 ### Union of Britain ###
-ENG_KR_GATHERING_STORM_DESC:0 "1921년 '명예로운 평화' 이후 대전쟁은 끝났고, 본섬에서 대중들의 신뢰와 지지는 사라졌습니다. 1925년, 재앙이 발생했습니다: 소규모 노동 쟁의가 TUC에 의한 총파업으로 빠르게 커졌고, 파업 노동자들에게로 군인들의 탈영이 이어졌습니다. 대규모 폭동 6주 후, 왕실과 대부분의 엘리트들은 캐나다로 대피했고 대신 새로운 노동 조합 대표 회의가 정치 권력을 장악했습니다. 현재 영국인들은 고립되어 사회주의를 구축하는데 만족하고 있지만, 캐나다의 왕정복고주의자들이 연방에 대해 음모를 꾸미는 것을 그냥 내버려 둘 수 없다고 많은 사람들이 생각하기 시작했습니다..."
+ENG_KR_GATHERING_STORM_DESC:0 "1921년 '명예로운 평화' 이후 대전쟁은 끝났고, 본토에서 대중들의 신뢰와 지지는 사라졌습니다. 1925년, 재앙이 발생했습니다: 소규모 노동 쟁의가 TUC에 의한 총파업으로 빠르게 커졌고, 노동자들의 파업에 이어 군인들이 탈영하기 시작했습니다. 대규모 폭동의 발생 6주 후, 왕실과 대부분의 엘리트들은 캐나다로 도주했고 대신 새로운 노동 조합 대표 회의가 정권을 장악했습니다. 현재 영국인들은 고립되어 사회주의를 구축하는데 만족하고 있지만, 캐나다의 왕당파들이 연방에 대해 음모를 꾸미는 것을 그냥 내버려 둘 수 없다고 많은 사람들이 생각하기 시작했습니다..."
 
 ### Canada ###
-CAN_KR_GATHERING_STORM_DESC:0 "1925년 혁명 이후, 왕실과 다른 영국 망명자들은 캐나다에서 피난처를 찾았습니다. 보수당의 지원을 받아 그들은 본섬을 되찾을 날을 꿈꾸며 준공식적인 망명 정부를 설립했습니다. 하지만 모든 것이 잘 흘러가는 것은 아닙니다. RB 베넷의 보수당은 1935년의 선거에서 '진보주의자'들의 느슨한 연합으로 이제 과반수의 의석을 차지하고 영국 망명자들과 왕의 커져가는 권력에 맞서 캐나다 의회의 주권을 확고히 하기 위해 노력하는 매켄지 킹의 자유당에게 패배했습니다. 세계의 정치 상황이 악화되면서, 국내외의 격렬한 갈등의 무대가 만들어졌습니다..."
+CAN_KR_GATHERING_STORM_DESC:0 "1925년 혁명 이후, 왕실과 영국인 망명자들은 캐나다로 피신했습니다. 보수당의 지원을 받아 그들은 본토를 되찾을 날을 꿈꾸며 준-공식적인 망명 정부를 설립했습니다. 하지만 모든 일이 잘 풀려가는 것은 아닙니다. RB 베넷의 보수당은 1935년의 선거에서 '진보주의자'들의 느슨한 연합으로 이제 과반수의 의석을 차지하고 영국 망명자들과 왕의 커져가는 영향력에 맞서 캐나다 의회의 주권을 확고히 하기 위해 노력하는 매켄지 킹의 자유당에게 패배했습니다. 세계의 정치 상황이 악화되면서, 국내외의 격렬한 갈등의 무대가 만들어졌습니다..."
 
 ### Russia ###
 RUS_KR_GATHERING_STORM_DESC:0 "러시아 내전 동안, 백군은 가진 모든 것을 가지고 싸웠지만, 적군은 여전히 국가의 산업 중심부를 장악했었습니다. 하지만 독일 제국이 붉은 러시아를 두려워해 백군을 지원하며 개입하기로 결정했습니다. 2년 후, 모스크바와 페트로그라드는 백군에게 넘어갔고 새로운 러시아 공화국이 설립되었습니다. 지난 15년 동안, 여당인 S-R과 카데츠의 불안한 연합은 케렌스키 대통령의 밑에서 러시아를 다스려왔지만, 러시아는 점차 불안정해지고 있습니다. 다른 정치 세력들이 성장하고 있으며, 그들은 세계에 러시아의 힘을 다시 보여주기 위해 변화할 시간이 지금이라고 생각하고 있습니다..."
 
 ### United States ###
-USA_KR_GATHERING_STORM_DESC:0 "미합중국은 대전쟁에서 고립에서 개입으로 정책을 변경할뻔 했지만, 결국에는 전쟁에서 벗어나 있었습니다. 이것은 동맹국의 승리로 이어졌습니다. 그 이후로, 미합중국은 유럽 무역 기회에 있어서 경제적으로 어려움을 겪어왔고 협상국의 빚 상환은 독일의 승리로 인해 불가능해졌습니다. 여전히 국제적으로 '아무 것도 아닌 곳'으로 여겨지는 미합중국은 커져가는 내부의 반대를 마주쳤는데, 공화당-민주당 헤게모니가 두 단체에게 도전받았습니다 - 바로 생디칼리스트들과 미국우선연합입니다. 본국의 커져가는 위협과 해외에서의 높지않은 평판으로 인해, 상황은 미합중국에게 좋지 않습니다..."
+USA_KR_GATHERING_STORM_DESC:0 "미합중국은 대전쟁에서 고립에서 개입으로 정책을 변경할뻔 했지만, 결국에는 전쟁에서 벗어나 있었습니다. 이것은 동맹국의 승리로 이어졌습니다. 그 이후로, 미합중국은 유럽 무역 기회에 있어서 경제적으로 어려움을 겪어왔고 협상국의 빚 상환은 독일의 승리로 인해 불가능해졌습니다. 여전히 국제적으로 '아무 것도 아닌 곳'으로 여겨지는 미합중국은 커져가는 내부의 반대를 마주쳤는데, 공화당-민주당의 독주 체제가 두 단체에게 도전받았습니다 - 바로 생디칼리스트들과 미국제일당입니다. 커져만 가는 본국에서의 위기와 해외에서의 긴장감은, 미합중국에게 좋지 않은 상황입니다..."
 
 ### Japan ###
 JAP_KR_GATHERING_STORM_DESC: "'명예로운 평화'는 식민지에 대한 일본의 권리를 보장해줬지만, 욱일제국에서 모든 것이 잘 풀린 것은 아닙니다. 경제적 동요 이후 1926년 생디칼리스트의 히로히토 섭정-왕자 암살 시도로 그 극에 이르렀고, 불안정한 정부는 또다른 위기의 해를 보냈습니다; 첫 문제는 다나카 장군이었고, 다음은 민주 연립 내각이었으며 그 다음은 북동부 중국에 대한 개입이었습니다. 1936년, 일본은 제국을 확장할 태세를 취했습니다. 독일의 지배가 쇠퇴하고 있는것으로 보이는 가운데, 일본인들은 남은 청나라의 영토와 독일의 태평양 지역들을 탐내고 있습니다..."
@@ -143,10 +143,10 @@ LBR_KR_GATHERING_STORM_DESC:0 "Liberia is an independent West African nation und
 MAF_KR_GATHERING_STORM_DESC:0 "Born after the absorption of French and Belgian colonies, the Freistadt Mittelafrika is a massive swath of land, composed of Cities, Chiefdoms, Kingdoms, Farmlands, Jungles, Savannahs, Deserts and more; for it covers half of the Dark Continent. A complex web weave of treaties, agreements and tacit understandings, the Colony, while stable, is remarkably unprofitable; something that the new man in charge, Hermann von Göring, and his men wish to change, no matter the cost. But could that cost be too great for Mittelafrika to pay? And will the Kaiser allow Göring to take such a risk?"
 
 ### Norway ###
-NOR_KR_GATHERING_STORM_DESC:0 "The Kingdom of Norway pursued a policy of neutrality during the Weltkrieg and remained in the British sphere of influence after peace was signed in 1921. Its dependence on the United Kingdom would prove to be disastrous when the British revolution of 1925 threw the Norwegian economy into chaos. Unlike its neighbours, Norway is not a member of the German 'Zollverein' and the resulting lack of continental trade has prevented an economic recovery. As the public is slowly losing confidence in democracy, both syndicalists and nationalists are calling for radical solutions and the election of 1936 is rapidly approaching..."
+NOR_KR_GATHERING_STORM_DESC:0 "노르웨이 왕국은 대전쟁 동안 중립 정책을 추구했고 1921년 평화 조약 이후에도 여전히 영국의 영향력 하에 있었지만, 1925년 영국 혁명이 노르웨이 경제를 수렁에 빠뜨렸을 때 영국에 대한 의존을 끝내야 한다는 의견이 힘을 얻었습니다. 이웃 국가들과는 달리, 노르웨이는 독일의 '관세 동맹'에 가입하지 않았고, 결과적으로 대륙 무역의 부족으로 인해 경제 회복의 전망은 어두워졌습니다. 대중들이 민주주의에 대한 자신감을 점점 잃어 가는 상황에서, 생디칼리스트들과 국가주의자들은 급진적인 해결책을 요구하고 있고 1936년 선거는 빠르게 다가오고 있습니다..."
 
 ### Portugal ###
-POR_KR_GATHERING_STORM_DESC:0 "The Kingdom of Portugal was restructured in 1922, after the disaster that was the Republic and the great shame it brought to the nation. Under the political control of the Intgralists since 1926, the Year of the Second Ultimatum, tense border incidents with Mittelafrika are commonplace, and three different offers to buy Angola and Mozambique were refused, for the King and his government consider every inch of overseas land a proper part of the Realm. While close to the Entente, Portugal still needs to renew its treaties with Great Britain, for the Syndicalist threat looms over Europe, and dark clouds gather over Spain..."
+POR_KR_GATHERING_STORM_DESC:0 "1922년 공화국에 닥쳐온 재앙과 그것으로 인한 국민들의 정부에 대한 반발은 결국 포르투갈 왕국을 복원시켰습니다. 여러 정보 기관들의 정치적 통제 하에 있는 왕국은 1926년, 두 번째 최후 통첩이 이루어졌던 해 이래로 미틀아프리카와의 팽팽한 국경 분쟁은 흔한 일로 받아들이게 되었고, 앙골라와 모잠비크의 왕에게 보낸 합리적인 세 가지 제안은 거절되었습니다. 포르투갈이 대륙 끝자락에서 유럽의 일에 무관심해 있는 동안에, 생디칼리즘의 위협이 유럽을 뒤덮고, 스페인에는 내전의 먹구름이 드리우고 있는 지금, 대영 제국과 체결했던 조약을 재검토할 때가 왔습니다..."
 
 ### Serbia ###
 SER_KR_GATHERING_STORM_DESC:0 "Being the catalyst for the Weltkrieg, the war proved disastrous for Serbia. Until the 1920s the country was under Austrian military occupation, when it was reestablished as a rump state. The country has kept a low profile, knowing that trying to retake any of the lost land would result in the wrath of Austria-Hungary. While officially a kingdom, Petar Bojovic has ruled Serbia for almost two decades as regent. Now though, the situation is changing. Romania and Greece are looking to regain their lost territory from Bulgaria, and with the 1937 Ausgleich negotiations in Austria, Serbia might be able to finally reassert herself as an independent power..."
@@ -161,7 +161,7 @@ SAF_KR_GATHERING_STORM_DESC:0 "Formed in 1910 as a merger of the various British
 SWI_KR_GATHERING_STORM_DESC:0 "Something something neutrality something something"
 
 ### Federation of Italy ###
-ITA_KR_GATHERING_STORM_DESC:0 "1919년, 이탈리아는 동맹국의 공격에 무너졌고, 이탈리아의 배신에 대한 분노와 이탈리아 반도를 분단시키려는 오스트리아의 요구가 합쳐져 명목상으로 교황이 지배하는 자치 공국들의 연방이 만들어졌습니다. 비오 11세 교황의 도움을 받는 급진파 추기경 단체는 최근에 교황 권력의 확장과 중앙집권화를 밀어붙였고 연방의 권력을 장악했습니다. 하지만, 교황청은 새 권력에 대한 여러 도전들을 맞닥뜨려야만 합니다 - 연방의 남부와 서부에 있는 악마같은 생디칼리스트 정권들부터 화가난 북쪽의 오스트리아까지 말입니다."
+ITA_KR_GATHERING_STORM_DESC:0 "1919년, 이탈리아는 동맹국의 공격에 무너졌고, 이탈리아의 배신에 대한 분노와 이탈리아 반도를 분단시키려는 오스트리아의 요구가 동시에 받아들여져 명목상으로 교황이 지배하는 자치 공국들의 연방이 만들어졌습니다. 비오 11세 교황의 도움을 받는 급진파 추기경 단체는 최근에 교황 권력의 확장과 중앙집권화를 밀어붙였고 연방의 권력을 장악했습니다. 하지만, 교황청은 새 권력에 대한 여러 도전들을 맞닥뜨려야만 합니다 - 연방의 남부와 서부에 있는 악마같은 생디칼리스트 정권들부터 여전히 분노해있는 북부의 오스트리아까지 말입니다."
 
 ### National France ###
 NFA_KR_GATHERING_STORM_DESC:0 "1919년, 프랑스 국가 조직 전부와 프랑스군은 프랑스 코뮌을 피해 해군과 함께 알제리로 달아났습니다. 이곳에서, 정치인들은 다시 처음부터 시작하기로 결정했고 망명 제4 공화국을 선포하고 본토의 권리를 주장하며 영국과 동맹을 유지했었습니다. 곧이어, 대부분의 망명자들은 민족주의자나 권위주의자가 되거나 둘 모두로 되었고 군대는 페르디낭 포슈의 지도 아래에서 권력을 장악했고 뒤이어 베르됭의 승장 필리프 페텡이 그를 이었습니다. 국민 프랑스는 원주민들의 불만에도 불구하고 본토를 되찾을 준비를 할 수 있을까요? - 드골의 청년 근위대의 도움을 받을 수 있을지도 모릅니다..."
