--- a/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
@@ -92,7 +92,7 @@ sec_cannot_be_replaced:0 "내무부 장관 재임명 불가"
 ministers_cannot_be_replaced:0 "장관 재임명 불가"
 
 ### Factions ###
-Mittelmacht:0 "미틀마흐트"
+Mittelmacht:0 "미틀에우로파"
 Entente:0 "협상국"
 Belgrade_Pact:0 "베오그라드 조약 기구"
 Third_International:0 "제 3인터내셔널"
@@ -101,7 +101,7 @@ Scandinavian_Pact:0 "스칸디나비아 조약 기구"
 Mediterranean_Bloc:0 "지중해 연합"
 
 ### Name and Description ###
-BM_HISTORY_TITLE:0 "역사 되짚어보기"
+BM_HISTORY_TITLE:0 "간단한 역사"
 KR_SCENARIO_NAME:0 "세계 대전의 유산"
 KR_SCENARIO_DESC:0 "1936년은 세계사의 전환점이 될 것입니다. 거대한 기회인 동시에 위협이 다가오는 때입니다. 독일 제국과 프랑스 코뮌 사이의 긴장감이 거세지고 있습니다. 러시아와 미합중국은 내분의 조짐이 나타나고 있으며 쇠락한 제국 오스트리아와 오스만은 쇠퇴하고 있습니다. 한편 노동조합주의, 전체주의 그리고 급진사회주의는 전 세계에 뿌리내리고 있습니다. 세계 대전 종전 후 15년. 옛 적국들이 다시 고개를 들고 있습니다. 단 하나의 불씨만으로도 이 화약고는 폭발하게 될 것입니다..."
 
