에우로파보다는 오이로파에 더 가깝습니다
독일어에서 이중모음 eu는 '오이'로 발음합니다.

--- a/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
@@ -245,7 +245,7 @@ mittel.45.t:0 "케냐타-졸프 추문"
 mittel.45.d:0 "우리의 행정부는 키쿠유 변호사가 이끄는 전 총독 빌헬름 졸프에 대한 집단 소송인 케냐타-졸프 추문의 진행을 초조한 예상과 함께 지켜보았다. 운좋게도 변호인 칼 슈미트는 훌륭한 변호를 선보였고, 그는 새로운 판례: “통치자는 예외적 상황에서 결정한다.”를 구성해 냈다. 법원은 이 주장을 받아들였는데, 즉 총독은 아프리카에서 자주적 권한을 보유하며, 그리고 정상적인 사법적 진행을 ‘벗어날 수 있는’ 권리를 지니고 있음을 인정한 것이다. 이는 명확히 영향을 끼치고 있으며, 우리 행정부의 몇몇 구성원은 이미 열정적으로 ‘지배적 총독’을 고대하고 있다."
 mittel.45.a:0 "통치자는 예외적 상황에서 결정하는 자이다."
 mittel.46.t:0 "검은 서류"
-mittel.46.d:0 "익명의 중앙아프리카 내 장교와 행정가들이 총독 폰 괴링의 불법적 행동의 증거와 기록물들을 정리한 뒤 내각에 제출하였다. 증거는, 만일 진실이라면, 매우 심각한 것이다. 그들이 제기한 것에 따르면, 총독 폰 괴링은 너그럽게 그에게 제공한 정부 예산을 중부 유럽 연합 내 정치가들을 매수하면서 자신의 통치에 대한 지원을 확고화 하였으며, 요청된 정부 공식 예산을 비자금을 조직하는 데에 활용하였다. 더욱 암담하게도, 자료는 증거가 부족하기는 하지만, 폰 괴링과 그의 충성파들은 그의 피고용인을 협박하기 위해 정보를 수집하며, 이는 납치와 언론가 협박, 심지어 암살자의 고용에도 연관되어 있음을 제기한다!"
+mittel.46.d:0 "익명의 중앙아프리카 내 장교와 행정가들이 총독 폰 괴링의 불법적 행동의 증거와 기록물들을 정리한 뒤 내각에 제출하였다. 증거는, 만일 진실이라면, 매우 심각한 것이다. 그들이 제기한 것에 따르면, 총독 폰 괴링은 너그럽게 그에게 제공한 정부 예산을 미틀오이로파 내 정치가들을 매수하면서 자신의 통치에 대한 지원을 확고화 하였으며, 요청된 정부 공식 예산을 비자금을 조직하는 데에 활용하였다. 더욱 암담하게도, 자료는 증거가 부족하기는 하지만, 폰 괴링과 그의 충성파들은 그의 피고용인을 협박하기 위해 정보를 수집하며, 이는 납치와 언론가 협박, 심지어 암살자의 고용에도 연관되어 있음을 제기한다!"
 mittel.46.a:0 "정식 조사가 지금 당장 이루어져야 한다!"
 mittel.46.b:0 "이는 베를린의 높으신 분에게 영향을 끼친다, 조용히 묻어라."
 mittel.47.t:0 "부정 조사"
