--- a/Kaiserreich Korean Translation/localisation/KR_Partitions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Partitions_l_english.yml
@@ -276,7 +276,7 @@ part.65.d:0 "...아무도 보지 못할 것이다..."
 part.65.a:0 "Independence at Last!"
 
 part.66.t:0 "에든버러의 괴뢰 정부"
-part.66.d:0 "스코틀랜드의 새 정부는 우리의 통제 하에 있으며, 스코틀랜드는 현재 중부 유럽의 일원입니다. 이로인해 유럽에서는 평화의 시대가 새롭게 시작될 것입니다."
+part.66.d:0 "스코틀랜드의 새 정부는 우리의 통제 하에 있으며, 스코틀랜드는 현재 미틀오이로파의 일원입니다. 이로 인해 유럽에서는 평화의 시대가 새롭게 시작될 것입니다."
 part.66.a:0 "팍스 유로파!"
 
 part.67.t:0 "웨일스"
@@ -284,7 +284,7 @@ part.67.d:0 "...아무도 보지 못할 것이다..."
 part.67.a:0 "And its all Thanks to the friendly Germans!"
 
 part.68.t:0 "카디프의 괴뢰 정부"
-part.68.d:0 "웨일스의 새 정부는 우리의 통제 하에 있으며, 웨일스는 이제 중부 유럽의 일원입니다. 웨일즈는 마침내 수세기에 걸친 영국의 압제로부터 자유롭게 되었습니다. 이제 그들은 황제의 보호를 받고 있습니다!"
+part.68.d:0 "웨일스의 새 정부는 우리의 통제 하에 있으며, 웨일스는 이제 미틀오이로파의 일원입니다. 웨일즈는 마침내 수세기에 걸친 영국의 압제로부터 자유롭게 되었습니다. 이제 그들은 황제의 보호를 받고 있습니다!"
 part.68.a:0 "팍스 유로파!"
 
 part.69.t:0 "잉글랜드"
@@ -292,7 +292,7 @@ part.69.d:0 "...아무도 보지 못할 것이다..."
 part.69.a:0 "Hurrah!"
 
 part.70.t:0 "런던의 괴뢰 정부"
-part.70.d:0 "런던의 새 정부는 우리의 통제 하에 있으며, 잉글랜드는 현재 중부 유럽의 일원입니다. 마침내 호엔촐레른 왕가 출신이 참회왕 에드워드의 왕좌에 앉았습니다! 잉글랜드는 더 이상 독일을 도발할 수 없을 것입니다!"
+part.70.d:0 "런던의 새 정부는 우리의 통제 하에 있으며, 잉글랜드는 현재 미틀오이로파의 일원입니다. 마침내 호엔촐레른 왕가 출신이 참회왕 에드워드의 왕좌에 앉았습니다! 잉글랜드는 더 이상 독일을 도발할 수 없을 것입니다!"
 part.70.a:0 "팍스 유로파!"
 
 part.5.t:0 "파리 함락"
@@ -313,11 +313,11 @@ part.8.d:0 "In accordance with our agreement, we are now giving the French provi
 part.8.a:0 "우린 따라야 한다."
 
 part.71.t:0 "파리의 괴뢰 정부"
-part.71.d:0 "프랑스의 새 정부는 우리의 통제 하에 있으며, 프랑스는 이제 중부 유럽의 일원입니다. 이로써 유럽에서의 유혈 사태를 완전히 종식되기를 바랍니다."
+part.71.d:0 "프랑스의 새 정부는 우리의 통제 하에 있으며, 프랑스는 이제 미틀오이로파의 일원입니다. 이로써 유럽에서의 유혈 사태를 완전히 종식되기를 바랍니다."
 part.71.a:0 "팍스 유로파!"
 
 part.72.t:0 "프랑스의 충성스러운 정부"
-part.72.d:0 "프랑스의 새 정부는 우리 통제 하에 있으며, 그 국가는 이제 중부 유럽의 일원입니다. 이로써 유럽에서의 유혈 사태를 완전히 종식되기를 바랍니다."
+part.72.d:0 "프랑스의 새 정부는 우리 통제 하에 있으며, 그 국가는 이제 미틀오이로파의 일원입니다. 이로써 유럽에서의 유혈 사태를 완전히 종식되기를 바랍니다."
 part.72.a:0 "팍스 유로파!"
 
 part.73.t:0 "프랑스의 충성스러운 정부"
@@ -335,7 +335,7 @@ part.75.b:0 "프랑스를 더 많은 국가로 나눠라!"
 part.75.c:0 "완전히 점령하는 것이 더 좋다."
 
 part.76.t:0 "파리의 괴뢰 정부"
-part.76.d:0 "프랑스의 새 정부는 우리의 통제 하에 있으며, 프랑스는 이제 중부 유럽의 일원입니다. 이로써 유럽에서의 유혈 사태를 완전히 종식되기를 바랍니다."
+part.76.d:0 "프랑스의 새 정부는 우리의 통제 하에 있으며, 프랑스는 이제 미틀오이로파의 일원입니다. 이로써 유럽에서의 유혈 사태를 완전히 종식되기를 바랍니다."
 part.76.a:0 "팍스 유로파!"
 
 part.77.t:0 "France renounces her claims"
@@ -355,12 +355,12 @@ part.80.d:0 "We will renounce our claims on the lands rightfully owned by German
 part.80.a:0 "우린 따라야 한다."
 
 part.81.t:0 "An alliance with Germany in exchange for our land"
-part.81.d:0"프랑스는 독일에 패배했습니다. 독일은 우리가 알자스-로렌에 대한 주장을 포기하고 중부 유럽에 가입한다면 우리 지역을 되돌려 주겠다고 말했습니다."
+part.81.d:0"프랑스는 독일에 패배했습니다. 독일은 우리가 알자스-로렌에 대한 주장을 포기하고 미틀오이로파에 가입한다면 우리 지역을 되돌려 주겠다고 말했습니다."
 part.81.a:0 "A great deal!"
 part.81.b:0 "We will never accept your proposal!"
 
 part.82.t:0 "An alliance with Germany in exchange for our land"
-part.82.d:0 "프랑스는 독일에 패배했습니다. 독일은 우리가 알자스-로렌에 대한 주장을 포기하고 중부 유럽에 가입한다면 우리 지역을 되돌려 주겠다고 말했습니다."
+part.82.d:0 "프랑스는 독일에 패배했습니다. 독일은 우리가 알자스-로렌에 대한 주장을 포기하고 미틀오이로파에 가입한다면 우리 지역을 되돌려 주겠다고 말했습니다."
 part.82.a:0 "A great deal!"
 part.82.b:0 "We will never accept your proposal!"
 
