--- a/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
@@ -1845,10 +1845,10 @@ usforeign.299.t:0 "미합중국이 협상국에 가입하다"
 usforeign.299.d:0 "협상국의 국가들은 우리가 전쟁에 참여한 것에 기뻐합니다 - 라파예트여, 우리가 가고 있다!"
 usforeign.299.a:0 "좋은 소식이군!"
 
-usforeign.300.t:0 "미합중국이 중앙유럽공동체 가입을 원하다"
-usforeign.300.d:0 "역사상 처음으로, 미합중국은 독일과 중앙유럽공동체의 국가들의 생디칼리스트 인터내셔널에 맞선 투쟁을 지원합니다. 이 예상치 못한 동맹은 우리가 원하는 바대로 세계를 바꾸게 만들 것입니다."
+usforeign.300.t:0 "미합중국이 미틀오이로파 가입을 원하다"
+usforeign.300.d:0 "역사상 처음으로, 미합중국은 독일과 미틀오이로파의 국가들의 생디칼리스트 인터내셔널에 맞선 투쟁을 지원합니다. 이 예상치 못한 동맹은 우리가 원하는 바대로 세계를 바꾸게 만들 것입니다."
 usforeign.300.a:0 "정말 좋군, 이제 우리는 이 전쟁에서 질 리 없다"
 
-usforeign.301.t:0 "미합중국이 중앙유럽공동체에 가입하다"
-usforeign.301.d:0 "독일인들은 우리가 공동의 대의에 함께하는 것에 기뻐합니다 - 사악한 생디칼리스트들을 쳐부수는 것 말이죠. 이제 우리는 중앙유럽공동체의 일부입니다"
+usforeign.301.t:0 "미합중국이 미틀오이로파에 가입하다"
+usforeign.301.d:0 "독일인들은 우리가 공동의 대의에 함께하는 것에 기뻐합니다 - 사악한 생디칼리스트들을 쳐부수는 것 말이죠. 이제 우리는 미틀오이로파의 일부입니다"
 usforeign.301.a:0 "정말 좋은 소식이군!"
