--- a/Kaiserreich Korean Translation/localisation/KR_World_Tension_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_Tension_l_english.yml
@@ -6,7 +6,7 @@ spanish_civil_war_threat:0 "스페인 내전 발발"
 second_weltkrieg_threat:0 "제 2차 세계 대전 발발"
 rise_mongol_empire_threat:0 "몽골 제국의 발흥"
 fourth_balkan_war_threat:0 "제 4차 발칸 전쟁 발발"
-mitteleuropa_revolt_threat:0 "중앙유럽공동체 반란"
+mitteleuropa_revolt_threat:0 "미틀오이로파 반란"
 fagressive_expansion:0 "일본이 독일을 위협함"
 
 worldtension.1.t:0 "세계 긴장도 상승!"
