--- a/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_General_l_english.yml
@@ -92,10 +92,10 @@ sec_cannot_be_replaced:0 "내무부 장관 재임명 불가"
 ministers_cannot_be_replaced:0 "장관 재임명 불가"
 
 ### Factions ###
-Mittelmacht:0 "미틀에우로파"
+Mittelmacht:0 "미틀오이로파"
 Entente:0 "협상국"
 Belgrade_Pact:0 "베오그라드 조약 기구"
-Third_International:0 "제 3인터내셔널"
+Third_International:0 "제3인터내셔널"
 Mongolian_Alliance:0 "대칸국"
 Scandinavian_Pact:0 "스칸디나비아 조약 기구"
 Mediterranean_Bloc:0 "지중해 연합"
