--- a/Kaiserreich Korean Translation/localisation/KR_Partitions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Partitions_l_english.yml
@@ -437,11 +437,11 @@ part.98.a:0 "팍스 유로파!"
 
 part.99.t:0 "프랑스의 새 정부 수반을 정하다."
 part.99.d:0 "We have the opportunity to install a member of the house of Romanov as the new King of France. It may be wise, however, to let the French choose their own government."
-part.99.a:0 "이오안 콘스탄티노브나 왕자가 샤를 11세가 될 것이다!"
+part.99.a:0 "이오안 콘스탄티노비치 왕자가 샤를 11세가 될 것이다!"
 part.99.b:0 "Let french decide, as long as they stay loyal."
 
 part.100.t:0 "새로운 왕"
-part.100.d:0 "러시아 제국이 이오안 콘스탄티노브나 왕자를 새로운 노르망디 대공으로 추대했습니다. 우리가 할 수 있는 일은 없으며, 프랑스는 다시 왕국이 되었습니다."
+part.100.d:0 "러시아 제국이 이오안 콘스탄티노비치 왕자를 새로운 프랑스 왕으로 추대했습니다. 우리가 할 수 있는 일은 없으며, 프랑스는 다시 왕국이 되었습니다."
 part.100.a:0 "샤를 11세 만세!"
 
 part.101.t:0 "프랑스군"
