--- a/Kaiserreich Korean Translation/localisation/KR_Puerto_Rico_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Puerto_Rico_l_english.yml
@@ -2,22 +2,22 @@
 
 ### Parties ###
 PRI_totalist_party:0 "PRTP"
-PRI_totalist_party_long:0 "Puerto Rico Totalist Party"
+PRI_totalist_party_long:0 "푸에르토리코 전체주의당"
 PRI_radical_socialist_party:0 "PRCP"
-PRI_radical_socialist_party_long:0 "Puerto Rico Communist Party"
+PRI_radical_socialist_party_long:0 "푸에르토리코 공산당"
 PRI_syndicalist_party:0 "CSPR"
-PRI_syndicalist_party_long:0 "Combined Syndicates of Puerto Rico"
-PRI_social_democrat_party:0 "Progressives"
-PRI_social_democrat_party_long:0 "Puerto Rico Progressive Party"
-PRI_social_liberal_party:0 "Democrats"
-PRI_social_liberal_party_long:0 "Puerto Rico Democratic Party"
-PRI_market_liberal_party:0 "Republicans"
-PRI_market_liberal_party_long:0 "Puerto Rico Republican Party"
-PRI_social_conservative_party:0 "Constitutionalists"
-PRI_social_conservative_party_long:0 "Constitution Party"
+PRI_syndicalist_party_long:0 "푸에르토리코 노동 연맹"
+PRI_social_democrat_party:0 "진보주의자"
+PRI_social_democrat_party_long:0 "푸에르토리코 진보당"
+PRI_social_liberal_party:0 "민주주의자"
+PRI_social_liberal_party_long:0 "푸에르토리코 민주당"
+PRI_market_liberal_party:0 "공화주의자"
+PRI_market_liberal_party_long:0 "푸에르토리코 공화당"
+PRI_social_conservative_party:0 "헌법주의자"
+PRI_social_conservative_party_long:0 "헌법당"
 PRI_authoritarian_democrat_party:0 "MJ"
-PRI_authoritarian_democrat_party_long:0 "Military Junta"
+PRI_authoritarian_democrat_party_long:0 "군부 독재"
 PRI_paternal_autocrat_party:0 "PRRP"
-PRI_paternal_autocrat_party_long:0 "Puerto Rico Royalist Party"
+PRI_paternal_autocrat_party_long:0 "푸에르토리코 왕당"
 PRI_national_populist_party:0 "PRFP"
-PRI_national_populist_party_long:0 "Puerto Rico First Party"
+PRI_national_populist_party_long:0 "푸에르토리코 우선당"
