--- a/Kaiserreich Korean Translation/localisation/KR_indonesia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_indonesia_l_english.yml
@@ -30,12 +30,12 @@ ins_national_populist_party_long:0 "Verbond voor Nationaal Herstel"
 ins.1.t:0 "네덜란드 망명정부"
 ins.1.d:0 "After narrowly escaping capture by Syndicalist militia the royal family, together with many senior leaders, arrived in Java, declaring the creation of the Kingdom of Netherlands in exile which will one day liberate our homeland from Syndicalism!"
 ins.1.a:0 "새 시작이군!"
-ins.2.t:0 "Netherlands in exile foreign policy"
+ins.2.t:0 "네덜란드 망명정부의 대외 정책"
 ins.2.d:0 "The recent takeover by Syndicalist scum left remnants of the once proud Dutch colonial Empire in precarious positions. In order to liberate our homeland from the Syndicalist usurpers we need to join one of major alliances. Which alliance shall we try to join?"
-ins.2.a:0 "We have special bonds with the Entente"
-ins.2.b:0 "We can cooperate with Japan"
-ins.2.c:0 "We can cooperate with Germany"
-ins.2.e:0 "We don't need any allies"
+ins.2.a:0 "우리는 협상국과 특별한 관계에 있다."
+ins.2.b:0 "일본과 협력할 수 있다."
+ins.2.c:0 "독일과 협력할 수 있다."
+ins.2.e:0 "동맹국은 필요 없다."
 ins.3.t:0 "Dutch government-in-exile wants to join the Entente"
 ins.3.d:0 "The Dutch government-in-exile has announced recently that they want to join the Entente. It's not a sudden move because pro-Entente policy is popular in many circles including the ruling cabinet and the army. Do we want to allow the exiled royals to join our alliance?"
 ins.3.a:0 "YES!"
@@ -57,6 +57,6 @@ ins.7.a:0 "Such a miserable mistake"
 ins.8.t:0 "Our request was refused!"
 ins.8.d:0 "It seems the Germans do not want us in their alliance..."
 ins.8.a:0 "Such a miserable mistake"
-ins.9.t:0 "Indonesia Gains Independence"
+ins.9.t:0 "인도네시아가 독립하다."
 ins.9.d:0 "Following our formal indepedence from [HOL.GetNameDef], Nationalist leaders in our country rapidly put forwards a proposal to change our name and flag. Honouring the legacy of the Majapahit Empire and our Austronesion legacy, the colors of our national flag will be Red and White, the Red Mother Earth and White Father Sky.\n\nAs for the name of our country, it shall be as the English navigator George Windsor Earl once proposed, Indós Nèsos, the Indian Island.\n\nIndonesia."
 ins.9.a:0 "Dutch we are no more. Indonesia rises!"
