--- a/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
@@ -622,8 +622,8 @@ mittel.164.a:0 "Give it time, we will win"
 mittel.165.t:0 "Teke revolts"
 mittel.165.d:0 "Discontent with being stripped of their traditional privileges, the Kingdom of Teke has taken up arms against our administration, and intends to fight for their total independence after what they call a 'betrayal' by the Germans."
 mittel.165.a:0 "Jackals! Vultures!"
-mittel.167.t:0 "In the heart of Africa"
-mittel.167.d:0 "Born after the absorption of French and Belgian colonies, Deutsch-Mittelafrika is a massive swath of land, composed of cities, chiefdoms, kingdoms, farmlands, jungles, savannahs, deserts and more; for it covers half of the Dark Continent. A complex web of treaties, agreements and tacit understandings, the colony, while stable, is remarkably unprofitable; something that the new man in charge, Hermann von Göring, and his men wish to change no matter the cost. But could that cost be too great for Mittelafrika to pay? And will the Kaiser allow von Göring to take such a risk?"
+mittel.167.t:0 "아프리카의 심장에서"
+mittel.167.d:0 "프랑스와 벨기에의 식민지를 흡수한 후에 태어난 자유주 중앙아프리카는 도시, 군장국가, 왕국, 농지, 정글, 사바나, 사막 등으로 구성된 거대한 땅이며 검은 대륙의 절반을 뒤덮고 있습니다. 식민지는 복잡하고 거미줄처럼 얽힌 조약과 협정, 묵약으로 이루어져 있으며 안정적이지만 수익성은 놀랄 정도로 없습니다. 새 총독인 헤르만 폰 괴링과 그의 부하들은 이를 어떤 비용을 들여서라도 바꾸고 싶어합니다. 하지만 그 비용은 중앙아프리카가 지불하기에는 너무 크지 않을까요? 그리고 황제께서 괴링이 그런 위험을 감수하는 것을 허락할까요?"
 mittel.167.a:0 "Sounds exciting!"
 mittel.1000.t:0 "Defeat in Africa"
 mittel.1000.d:0 "The Mittelafrikans have defeated our forces in Africa, it may be time to surrender our colonies for now, let us see what it is Mittelafrika wants out of this war..."
