--- a/Kaiserreich Korean Translation/localisation/KR_Libya_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Libya_l_english.yml
@@ -2,34 +2,34 @@ l_english:
 
 ### Events ###
 
-libya.1.t:0 "Vilayet of Tripolitania"
-libya.1.d:0 "When Italy surrendered to the Central Powers in 1919, the Ottomans regained Libya as part of their Empire. However, despite the final victory in the war, the Weltkrieg showed the weakness and the decline of the Ottoman Empire. During the 1920s, with the decline of the Ottoman authority over the Empire and mounting internal pressure, Libya and Armenia were able to gain the position of autonomous region on June 1928. Since then, Libya remained loyal to its master in Constantinople, but lately the Arab population is again starting to show signs of distress and Egypt in the east might be waiting for the right occasion to free Libya from Ottoman rule... or to become its new master!"
-libya.1.a:0 "What will the future bring?"
+libya.1.t:0 "트리폴리타니아 빌라예트"
+libya.1.d:0 "1919년 이탈리아가 동맹국에 항복한 후, 오스만 제국은 리비아를 되찾아 제국의 일부로 만들었습니다. 하지만 전쟁에서의 승리에도 불구하고, 세계대전으로 인해 오스만 제국의 약점과 쇠퇴가 드러났습니다. 1920년대에 제국 전역에 걸쳐 오스만 제국의 권위가 쇠퇴하고 내부의 압력이 증가하면서, 리비아와 아르메니아는 1928년 6월에 자치 지역의 지위를 얻을 수 있었습니다. 그 후 리비아는 콘스탄티노플의 지도자에게 충성을 다했지만, 최근 아랍인들이 그들이 받던 고통의 신호를 다시 보내고 있으며, 동쪽에 있는 이집트가 리비아를 오스만의 통치로부터 해방할 적절한 때를 기다리고 있을지도 모릅니다.... 아니면 새로운 주인이 될 수도 있죠!"
+libya.1.a:0 "미래엔 어떤 일이 일어날까?"
 
-libya.2.t:0 "Status of Tripolitania"
-libya.2.d:0 "For many years, the Ottomans have been free to impose their will over us. Today, problems have arisen for the Ottomans, and Idris-al-Sanusi wishes to claim the Libyan throne once and for all and establish a Free Libya."
-libya.2.a:0 "Declare complete independence from the Ottomans!"
-libya.2.b:0 "Time is not right!"
+libya.2.t:0 "트리폴리타니아의 지위"
+libya.2.d:0 "오랜 시간동안, 오스만 제국은 자유롭게 그들의 의지를 우리에게 강요해왔습니다. 오늘, 오스만 제국에 문제가 생겼고, 이드리스-알-사누시는 리비아의 왕위를 빼앗아 최종적으로 자유 리비아를 세우고 싶어합니다."
+libya.2.a:0 "오스만 제국으로부터의 완전한 독립을 선언하자!"
+libya.2.b:0 "때가 아니다!"
 
-libya.3.t:0 "Tripolitania declares independence"
-libya.3.d:0 "For many years, we have ruled over Tripolitania. But today, with our country engaged in a lengthy conflict, Tripolitania decided to use this opportunity to break from our dominance. How should we react to this mess?"
-libya.3.a:0 "Blasphemy! Crush this upstart!"
-libya.3.b:0 "Let them go"
+libya.3.t:0 "트리폴리타니아가 독립을 선언하다"
+libya.3.d:0 "여러 해 동안, 우리는 트리폴리타니아를 통치해왔습니다. 하지만 최근 우리 제국이 장기간의 분쟁에 휘말려 있는 동안, 트리폴리타니아는 우리 지배로부터 벗어나기 위해 이 기회를 이용하기로 결정했습니다. 이런 엉망진창인 상황에서 우리는 어떻게 대처해야 할까요?"
+libya.3.a:0 "신성모독이다! 이 건방진 놈을 때려 부숴라!"
+libya.3.b:0 "놔둬라."
 
-libya.4.t:0 "Libya still exists!"
-libya.4.d:0 "Even the concentration of our elite armed forces could not break apart the rebellious state of Libya. Some members of the general staff suggest that continuing with this fruitless effort greatly weakens our forces facing the hostile Arabian states of Hashemite Arabia and Egypt. Shall we recognise the independence of Libya?"
-libya.4.a:0 "Accept their independence..."
-libya.4.b:0 "Never!"
+libya.4.t:0 "리비아가 여전히 존재한다!"
+libya.4.d:0 "정예 부대를 집중했지만, 우리는 리비아 주의 반역을 무너뜨릴 수 없었습니다. 몇몇 장군들은 이러한 성과 없는 노력을 계속하는 것이 하심가 아라비아와 이집트 같은 적대적인 아랍 국가들과 직면하고 있는 우리의 군대를 크게 약화시킨다고 했습니다. 리비아의 독립을 인정할까요?"
+libya.4.a:0 "독립을 인정하라..."
+libya.4.b:0 "절대 안돼!"
 
-libya.5.t:0 "Foreign policy"
-libya.5.d:0 "In order to secure our independence from foreign threats we should join the already existing Arabian alliance between Egypt and Hashemite Arabia."
-libya.5.a:0 "Send proposition"
-libya.5.b:0 "There is no need for an alliance"
+libya.5.t:0 "대외 정책"
+libya.5.d:0 "외세의 위협으로부터 우리의 독립을 지키기 위해서 우리는 이집트와 하심가 아라비아 간 이미 존재하는 아랍 동맹에 동참해야 합니다."
+libya.5.a:0 "제안을 보내라"
+libya.5.b:0 "동맹을 맺을 필요가 없다."
 
-libya.6.t:0 "Libya wants to join our alliance"
-libya.6.d:0 "Libya is seeking allies in order to protect its independence from foreign threats. Do we want to admit Libya into our alliance?"
-libya.6.a:0 "Yes, Arabian countries should keep together"
-libya.6.b:0 "Refuse them!"
+libya.6.t:0 "리비아는 우리 동맹에 참여하고 싶어하다."
+libya.6.d:0 "리비아는 외세의 위협으로부터 독립을 지키기 위해 동맹국을 찾고 있습니다. 리비아가 우리 동맹에 참여하는 것을 처락할까요?"
+libya.6.a:0 "그렇다, 아랍 국가들은 함께 해야 한다."
+libya.6.b:0 "거절한다!"
 
 libya.7.t:0 "Libya joins the Arabian block"
 libya.7.d:0 "Egypt accepted our request and admitted us to their alliance. With our presence in this alliance our independence should be secured!"
