--- a/Kaiserreich Korean Translation/localisation/KR_Transylvania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Transylvania_l_english.yml
@@ -26,11 +26,11 @@ TRS_national_populist_party_long:0 "Partidul Național Român"
 POLITICS_ALEXANDRU_VAIDAVOEVOD_DESC:0 "Born to a Greek-Catholic family Voevod was supportive of a plan to federalise the domains of the Habsburgs, and was close to Archduke Franz Ferdinand. In 1906, he joined a group of Romanian nationalists in the Budapest Parliament, becoming an important opponent of the Hungarian government, and fought for Transylvania's right for self-determination. Disappointed by the Austrian cause after Franz Ferdinand's assassination in Sarajevo he turned towards an advocacy of Transylvania's union with Romania."
 
 ### Event Text ###
-transylvania.1.t:0 "Union with Romania?"
-transylvania.1.d:0 "Finally Transylvania is independent from Hungary. We are a Romanian state and the population has since long desired to join our brethren in Romania, to form one state together. Finally, the dream of a Greater Romania can be achieved."
-transylvania.1.a:0 "Proclaim the Union with Romania."
-transylvania.1.b:0 "No, we should keep our independence!"
+transylvania.1.t:0 "루마니아와의 연합?"
+transylvania.1.d:0 "마침내 트란실바니아는 헝가리로부터 독립했습니다. 우리는 루마니아 국가이고 국민들은 우리 동포들과 하나의 국가를 함께 이루기위해 오랫동안 루마니아에 들어가기를 원했습니다. 마침내, 대 루마니아의 꿈은 이루어 질 수 있습니다."
+transylvania.1.a:0 "루마니아와의 연합을 선언하라."
+transylvania.1.b:0 "아니, 우리는 우리의 독립을 유지해야 한다!"
 
-transylvania.2.t:0 "Transylvania proclaims a Union with Romania"
-transylvania.2.d:0 "Transylvania has managed to become independent from Hungary. Their government has unanimously declared a Union between Romania and Transylvania. Finally, we can welcome our brethren into one Greater Romania."
-transylvania.2.a:0 "Welcome, Romanian brethren!"
+transylvania.2.t:0 "트란실바니아는 루마니아와의 연합을 선언하다."
+transylvania.2.d:0 "트란실바니아는 헝가리로부터 가까스로 독립했습니다. 트란실바니아 정부는 루마니아와 트란실바니아 사이의 연합을 만장 일치로 선언했습니다. 마침내, 우리는 동포들을 하나의 대 루마니아로 환영할 수 있습니다."
+transylvania.2.a:0 "어서와라, 루마니아 동포들이여!"
