--- a/Kaiserreich Korean Translation/localisation/KR_Croatia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Croatia_l_english.yml
@@ -10,7 +10,7 @@ CRO_market_liberal_party:0 "HZ"
 CRO_social_conservative_party:0 "HSS"
 CRO_authoritarian_democrat_party:0 "HPS"
 CRO_paternal_autocrat_party:0 "HSP"
-CRO_national_populist_party:0 "우스타냐"
+CRO_national_populist_party:0 "우스타샤"
 CRO_totalist_party_long:0 "크로아티아 생디칼리즘 연맹"
 CRO_radical_socialist_party_long:0 "크로아티아 생디칼리즘당" #(Syndicalist Party of Croatia)
 CRO_syndicalist_party_long:0 "크로아티아 독립 노동자당" #(Independent Workers' Party of Croatia)
@@ -18,6 +18,6 @@ CRO_social_democrat_party_long:0 "크로아티아 사회민주당" #(Social Demo
 CRO_social_liberal_party_long:0 "독립민주당" #(Independent Democratic Party)
 CRO_market_liberal_party_long:0 "크로아티아 공동체" #(Croatian Community)
 CRO_social_conservative_party_long:0 "크로아티아 농민당" #(Croatian Peasant Party)
-CRO_authoritarian_democrat_party_long:0 "크로아티아 대중당" #(Croatian Popular Party)
+CRO_authoritarian_democrat_party_long:0 "크로아티아 인민당" #(Croatian Popular Party)
 CRO_paternal_autocrat_party_long:0 "크로아티아당의 권리" #(Croatian Party of Rights)
 CRO_national_populist_party_long:0 "크로아티아 혁명 운동" #(Croatian revolutionary movement)
