--- a/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
@@ -125,7 +125,7 @@ SOV_CEN_ALO:0 "알라쉬-오르다에서의 혁명?"
 SOV_CEN_ALO_desc:0 "We are currently in a prime position to use our network of contacts and supporters among the Russian population in Alash-Orda to stage a Syndicalist coup against the government."
 SOV_CEN_TRK:0 "투르케스탄과의 전쟁!"
 SOV_CEN_TRK_desc:0 "Now that the Alash state have been dealt with we can strike at the heart of the Islamic state of Turkestan. Their long list of crimes is about to come to an end."
-SOV_FAR_TRA:0 "트랜스아무르의 노조주의자들"
+SOV_FAR_TRA:0 "트랜스아무르의 생디칼리스트들"
 SOV_FAR_TRA_desc:0 "Various dissenting groups operating against the Transamurian Admiralty are seeking support. We can offer them our assistance and influence them towards our cause!"
 SOV_FAR_MON:0 "시베리아 횡단 위기"
 SOV_FAR_MON_desc:0 "Horrible news! A train full of Soviet citizens has been massacred by bandits on the Mongolian section of the Trans-Siberian railway! Our people are shocked by this act of barbarism and demand an immediate response from the government. Baron von Ungern-Sternberg, Supreme Khan of All Mongols, is getting stronger. This might be the perfect opportunity to stop his wild and savage men."
