--- a/Kaiserreich Korean Translation/localisation/KR_German_Union_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_German_Union_l_english.yml
@@ -5,8 +5,8 @@ GRU_totalist_party:0 "SE"
 GRU_totalist_party_long:0 "사회주의통일당"
 GRU_radical_socialist_party:0 "FAUD"
 GRU_radical_socialist_party_long:0 "독일자유노동자동맹"
-GRU_syndicalist_party:0 "Spartakids"
-GRU_syndicalist_party_long:0 "Spartakids"
+GRU_syndicalist_party:0 "스파르타키즈"
+GRU_syndicalist_party_long:0 ""
 GRU_social_democrat_party:0 "CZU"
 GRU_social_democrat_party_long:0 "기독교사회연합"
 GRU_social_liberal_party:0 "CDU"
