--- a/Kaiserreich Korean Translation/localisation/KR_Bohemia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bohemia_l_english.yml
@@ -1,22 +1,22 @@
 ﻿l_english:
 
 ### Parties ###
-BOM_totalist_party:0 "체코전체주의당"
-BOM_totalist_party_long:0 "체코전체주의당"
-BOM_syndicalist_party:0 "체코노동조합당"
-BOM_syndicalist_party_long:0 "체코노동조합당"
-BOM_radical_socialist_party:0 "체코사회당"
-BOM_radical_socialist_party_long:0 "체코사회당"
-BOM_social_democrat_party:0 "체코사회민주당"
-BOM_social_democrat_party_long:0 "체코사회민주당"
-BOM_social_liberal_party:0 "체코국민사회당"
-BOM_social_liberal_party_long:0 "체코국민사회당"
-BOM_market_liberal_party:0 "국민자유당"
-BOM_market_liberal_party_long:0 "국민자유당"
-BOM_social_conservative_party:0 "체코민중당"
-BOM_social_conservative_party_long:0 "체코민중당"
-BOM_authoritarian_democrat_party:0 "체코국민민주당"
-BOM_authoritarian_democrat_party_long:0 "체코국민민주당"
+BOM_totalist_party:0 "체코 전체주의당"
+BOM_totalist_party_long:0 "체코 전체주의당"
+BOM_syndicalist_party:0 "체코 생디칼리스트당"
+BOM_syndicalist_party_long:0 "체코 생디칼리스트당"
+BOM_radical_socialist_party:0 "체코 사회당"
+BOM_radical_socialist_party_long:0 "체코 사회당"
+BOM_social_democrat_party:0 "체코 사회민주당"
+BOM_social_democrat_party_long:0 "체코 사회민주당"
+BOM_social_liberal_party:0 "체코 국민사회당"
+BOM_social_liberal_party_long:0 "체코 국민사회당"
+BOM_market_liberal_party:0 "국민 자유당"
+BOM_market_liberal_party_long:0 "국민 자유당"
+BOM_social_conservative_party:0 "체코 민중당"
+BOM_social_conservative_party_long:0 "체코 민중당"
+BOM_authoritarian_democrat_party:0 "체코 국민민주당"
+BOM_authoritarian_democrat_party_long:0 "체코 국민민주당"
 BOM_paternal_autocrat_party:0 "국민당"
 BOM_paternal_autocrat_party_long:0 "국민당"
 BOM_national_populist_party:0 "국민통일당"
