--- a/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Japan_l_english.yml
@@ -4,9 +4,9 @@ l_english:
 JAP_motor_1:0 "자동차 산업의 일본화"
 
 ### Parties ###
-JAP_totalist_party:0 "Sōdōmei"
+JAP_totalist_party:0 "총동맹"
 JAP_syndicalist_party:0 "공산당"
-JAP_radical_socialist_party:0 "Kyōsan-tō"
+JAP_radical_socialist_party:0 "공산당"
 JAP_social_democrat_party:0 "사회 대중당"
 JAP_social_liberal_party:0 "혁신당"
 JAP_market_liberal_party:0 "민정당"
@@ -16,17 +16,17 @@ JAP_authoritarian_democrat_party2:0 "대정익찬회"
 JAP_paternal_autocrat_party:0 "국민 동맹"
 JAP_national_populist_party:0 "동방회"
 
-JAP_totalist_party_long:0 "Nihon Rōdō Sōdōmei (Japan Federation of Labour)"
-JAP_syndicalist_party_long:0 "Nihon Rōdō Sōdōmei (Japan Federation of Labour)"
-JAP_radical_socialist_party_long:0 "Nihon Kyōsan-tō (Japanese Communist Party)"
-JAP_social_democrat_party_long:0 "Shakai Taishūtō (Social Masses Party)"
-JAP_social_liberal_party_long:0 "Kakushintō (Reformist Party)"
-JAP_market_liberal_party_long:0 "Rikken Minseitō (Constitutional Democratic Party)"
-JAP_social_conservative_party_long:0 "Rikken Seiyūkai (Constitutional Association of Political Friendship)"
-JAP_authoritarian_democrat_party_long:0 "Shōwakai (Shōwa Society)"
-JAP_authoritarian_democrat_party_long2:0 "Imperial Rule Assistance Society"
-JAP_paternal_autocrat_party_long:0 "Kokumin Dōmei (National Alliance)"
-JAP_national_populist_party_long:0 "Tōhōkai (Society of the East)"
+JAP_totalist_party_long:0 "일본 노동 총동맹"
+JAP_syndicalist_party_long:0 "일본 노동 총동맹"
+JAP_radical_socialist_party_long:0 "일본 공산당"
+JAP_social_democrat_party_long:0 "사회 대중당"
+JAP_social_liberal_party_long:0 "혁신당"
+JAP_market_liberal_party_long:0 "입헌 민주당"
+JAP_social_conservative_party_long:0 "입헌 정우회"
+JAP_authoritarian_democrat_party_long:0 "쇼와회"
+JAP_authoritarian_democrat_party_long2:0 "대정 익찬회"
+JAP_paternal_autocrat_party_long:0 "국민 동맹"
+JAP_national_populist_party_long:0 "동방회"
 
 ### Leader Descriptions ###
 POLITICS_HIROHITO_DESC:0 "Emperor Hirohito's short reign has, as of yet, been a period of relative stability and economic recovery for Japan. With anarchist insurrectionism defeated, and Japan's neighbors appearing increasingly weak, Hirohito stands poised to lead Japan into an era of unprecedented hegemony in Asia, and perhaps even further abroad."
@@ -35,7 +35,7 @@ POLITICS_HIROHITO_DESC:0 "Emperor Hirohito's short reign has, as of yet, been a 
 JAP_narrow_rail:0 "Kyōki Railways"
 JAP_narrow_rail_desc:0 "Japan's railways were built using an unusually narrow gauge inherited from the British Empire during the Meiji Era. While it does make construction easier in Japan's mountainous terrain, its speed limitations have negatively impacted our industry. Experts argue over whether conversion is worth the government's time."
 japan_NSA_act:0 "국가보안법"
-JAP_COL_PREP:0 "Preparing for Colonisation"
+JAP_COL_PREP:0 "식민화를 준비하라"
 niigata_riots:0 "니가타 민란"
 JAP_imperial_gov:0 "제국을 위하여!"
 JAP_DEM_GOV:0 "동양의 민주주의"
@@ -51,7 +51,7 @@ National_Service_Draft_Ordinance_1_desc:0 "The National Service Draft Ordinance 
 National_Service_Draft_Ordinance_2:0 "The National Service Draft Ordinance"
 National_Service_Draft_Ordinance_2_desc:0 "The National Service Draft Ordinance is a supplement to the earlier National Total Mobilisation Ordinance, particularly its Article 4, which had enabled the Government to mobilise the labour force. The new Ordinance authorises the Government to conscript workers for war industries."
 economic_reform:0 "경제 개혁"
-JAP_change_rail:0 "Changing Rail Gauge"
+JAP_change_rail:0 "철도규격 변경"
 
 JAP_Kakushinha_idea_1:0 "혁신파"
 JAP_Kakushinha_idea_2:0 "혁신파"
@@ -132,9 +132,9 @@ small_rail:0 "§RSwitching rail gauges will be a long and difficult process.§!\
 ### Focuses - Political - Base ###
 JAP_NSA_focus:0 "The National Security Act"
 JAP_NSA_focus_desc:0 "A debate in the Diet regarding the national security act has been raging for the past few weeks, and it is time for us to decide which course our nation will take. Some conservative members of the Diet fear that if the act isn't passed, radical elements in society will try to seize power. The future of Japan is in our hands."
-JAP_democratic_path:0 "Defend Democracy!"
+JAP_democratic_path:0 "민주주의를 사수하라!"
 JAP_democratic_path_desc:0 "After receiving the offer from the scheming army officers, General Hayashi Senjuro has rejected to back their coup attempt, citing his responsibility to the established regime. While not actively opposing the putschists, it is unlikely they can win without the support of the central command."
-JAP_imperialist_path:0 "The Longest Day"
+JAP_imperialist_path:0 "가장 길었던 날"
 JAP_imperialist_path_desc:0 "General Hayashi Senjuro has agreed to support the scheming army officers in their coup attempt. With support from the army minister, it seems like their attempt will be successful..."
 
 ### Focuses - Political - Democratic ###
@@ -142,36 +142,36 @@ JAP_elec_reform:0 "Electorate Reform"
 JAP_elec_reform_desc:0 "After extensive review of our voting system it was discovered various loopholes and oversights allows significant amounts of voter fraud in general elections. By introducing a reform package to the electorate, we can hopefully limit this phenomenon."
 JAP_fem_reform:0 "Enact Women's Suffrage"
 JAP_fem_reform_desc:0 "While feminist activity started in Japan back in the 19th century they have only recently managed to achieve any progress by overthrowing the 'Police Security Act' in 1921. Recently more liberal minded members of the Diet have been pushing to finally grant women full political rights as part of Japan's growing democratic traditions."
-JAP_DEM_SCI:0 "Academic Pluralism"
+JAP_DEM_SCI:0 "학문적 다원론"
 JAP_DEM_SCI_desc:0 "Pluralism is a central part of any democracy. By encouraging Pluralism in our academic institutions, we can improve our research and education!"
-JAP_DEM_EDU:0 "Constitutional Education"
+JAP_DEM_EDU:0 "헌법 교육"
 JAP_DEM_EDU_desc:0 "By introducing a new curriculum to the public-school system that includes democratic theory and principles we will raise a new generation of Japanese youth who will enshrine the ideas of humanism and democracy."
-JAP_DEM_CUL:0 "Cultural Golden Age"
+JAP_DEM_CUL:0 "문화 황금시대"
 JAP_DEM_CUL_desc:0 "The openness and enlightenment of our society have encouraged a golden age in culture, both traditional and modern. Ancient arts of theatre and poetry are flourishing as well as new forms of entertainment such as films and animation. This reflects greatly on us abroad and strengthens Japanese values both in both foreign and domestic markets."
 
 ### Focuses - Political - Centralism ###
-JAP_chuou:0 "Military Centralism"
+JAP_chuou:0 "군사적 중앙집권"
 JAP_chuou_desc:0 "The Emperor has refused to support the government, and a now a coup is certain. The question is no longer if but when and who..."
 #JAP_chuou_desc:0 "Faced with a possible coup from the Ishinha faction, the centralist leaders began approaching the Imperial Court, hoping to gain his favour. Without Imperial support, the coup will most likely fail."
-JAP_chuou_start:0 "A Political Blueprint"
+JAP_chuou_start:0 "정치적 청사진"
 JAP_chuou_start_desc:0 "After our assumption of power we were expected to draw out a national political plan reflecting our militarist ideology. In the following weeks, the supreme military council will be meeting to discuss such a document."
 JAP_chuou_fund:0 "Fund Adjustment Ordinance"
 JAP_chuou_fund_desc:0 "The Fund Adjustment Ordinance is the first of a series of 'National Defence Ordinances' decrees by the Centralist regime. The state-owned Bank of Japan is now empowered to regulate capital investments, establishment of companies, and the subscription or underwriting of securities. This will allow the Government to control and allocate funds to war industries."
-JAP_chuou_mob:0 "National Total Mobilisation Ordinance"
+JAP_chuou_mob:0 "국가총동원법"
 JAP_chuou_mob_desc:0 "The National Total Mobilisation Ordinance is designed to provide the Government a means to control and mobilise all the resources and manpower available in the Empire. During war-time we will have full control over the labour supply, production of goods, financial institutions, industrial and labour organisations, prices, and the press."
-JAP_chuou_cons:0 "Military Training Curriculum"
+JAP_chuou_cons:0 "군사 훈련 교육"
 JAP_chuou_cons_desc:0 "Military training was first introduced into the compulsory physical education curriculum in 1925 by the Tanaka regime as a way to subdue growing anti-militarist influence and discontent among students. It was discontinued with the Constitutional Restoration of 1926 but it is time to reverse that decision."
-JAP_chuou_draft:0 "National Service Draft Ordinance"
+JAP_chuou_draft:0 "국민징용령"
 JAP_chuou_draft_desc:0 "The National Service Draft Ordinance is a supplement to the earlier National Total Mobilisation Ordinance, particularly its Article 4, which had enabled the Government to mobilise the labour force. The new Ordinance authorises the Government to conscript workers for war industries."
 JAP_chuou_last:0 "One Corporate State"
 JAP_chuou_last_desc:0 "The time has finally come to transform Japan into a unified and strong corporate state, where every individual does his part for the good of the Emperor and the Kokutai."
 
 ### Focuses - Political - Imperial ###
-JAP_ishinha:0 "The Showa Restoration"
+JAP_ishinha:0 "쇼와 복권"
 JAP_ishinha_desc:0 "After being left out of key governmental and administrative position in the new Japanese government, the Restoration faction of the army is disgruntled and is planning another coup. If they are to gain the support of the Emperor, they are likely to succeed."
 JAP_yokuseiha:0 "Yokuseiha Faction"
 JAP_yokuseiha_desc:0 "The Yokuseiha faction is comprised of ex-parliament members with restorationist tendencies. They resist the dictatorial plans set by Konoe for the Taisei Yokusankai and prefer a decentralised approach to restoration."
-JAP_yokuseiha_POL:0 "Separation of Powers"
+JAP_yokuseiha_POL:0 "권력 분할"
 JAP_yokuseiha_POL_desc:0 "While supporting imperial restoration the Yokuseiha members also see the problem with absolute power. Partly to prevent corruption and partly to secure their power they arrange a decentralised system for the Taisei Yokusankai."
 JAP_yokuseiha_ECO:0 "시장 자유"
 JAP_yokuseiha_ECO_desc:0 "Keeping in line with their decentralised approach the Yokuseiha propose an economic plan consisting of minimal state intervention in the economy. While this would allow groups like the Zaibatsu to gain more power this policy will also endear the regime to them."
@@ -181,9 +181,9 @@ JAP_kodoha:0 "황도파"
 JAP_kodoha_desc:0 "The Kodoha faction is made up of restorationist army generals and officers who wish to bring Japan back to its folkist roots and create a strong imperial power at the head of the state."
 JAP_kodoha_POL:0 "Imperial Power"
 JAP_kodoha_POL_desc:0 "The Kodoha faction resists Konoe's efforts in creating a separate dictatorial power from the imperial court and instead wish to transfer ultimate power to the emperor in a form of absolutism where the Taisei Yokusankai is a subject of the emperor."
-JAP_kodoha_ECO:0 "Nationalisation"
+JAP_kodoha_ECO:0 "국유화"
 JAP_kodoha_ECO_desc:0 "The Kodoha faction's economic plan involves nationalisation of the economy for a dedicated empire-oriented production. By establishing an institution for government control such nationalisation can begin."
-JAP_kodoha_AGR:0 "Land Reform"
+JAP_kodoha_AGR:0 "토지개혁"
 JAP_kodoha_AGR_desc:0 "The revolutionary part of the Kodoha faction shows itself in their radical plan of land redistribution. The Kodoha leadership believes drawing a plan for national land reform will solve both the agricultural crisis and the rise of syndicalism."
 JAP_kakushinha:0 "Kakushinha Faction"
 JAP_kakushinha_desc:0 "The Kakushinha, or reform faction, is led by prince Konoe and is mainly comprised of intellectuals and politicians and aims for a reconstruction of the Japanese political system with an absolute Taisei Yokusankai at the core of Japanese society."
@@ -197,19 +197,19 @@ JAP_kakushinha_AGR_desc:0 "The Kakushinha faction's solution to Japan's crumblin
 ### Focuses - Economic - Base ###
 JAP_tech_team:0 "National R&D Institutes"
 JAP_tech_team_desc:0 "By funding National Research and Development Institutes, we can make it easier for independent research teams to work together, improving our research output, and allowing us to better direct national research priorities."
-JAP_small_rail:0 "Kyōki Railways"
+JAP_small_rail:0 "협궤 철도"
 JAP_small_rail_desc:0 "Our narrow gauge railways had their advantages during construction, but now they hold back our burgeoning industry. The future waits for no-one, least of all Japan."
 
 ### Focuses - Economic - Zaibatsu ###
-JAP_ZAI_ECO:0 "Support the Zaibatsu"
+JAP_ZAI_ECO:0 "재벌을 지원하다"
 JAP_ZAI_ECO_desc:0 "Over the past several decades the Zaibatsu have increased their political and economic power to a staggering degree. It would be in our best interest to cooperate with them."
-JAP_ZAI_FAC:0 "Zaibatsu Factory Construction"
-JAP_ZAI_FAC_desc:0 "Some Zaibatsu have requested state help to build factories throughout the home islands. This would create many jobs and help resolve the economic crisis."
-JAP_ZAI_TRAN:0 "Zaibatsu Railway Construction"
-JAP_ZAI_TRAN_desc:0 "Some of the Zaibatsu have requested state help to build a railway system throughout the country. Where they benefit, so do we."
-JAP_ZAI_RAW:0 "Zaibatsu Resource Projects"
+JAP_ZAI_FAC:0 "재벌의 공장 건설"
+JAP_ZAI_FAC_desc:0 "몇몇 재벌들이 본토전역에 공장건설을 위해 국가에 도움을 요청했습니다. 이는 많은 일자리를 창출하고, 경제위기를 해결하는데 도움이 될 것입니다."
+JAP_ZAI_TRAN:0 "재벌의 철도 건설"
+JAP_ZAI_TRAN_desc:0 "몇몇 재벌들이 국가전역에 철도망 건설을 위해 국가에 도움을 요청했습니다. 그들이 이익을 얻는곳에 우리도 이익을 얻습니다."
+JAP_ZAI_RAW:0 "재벌의 자원 계획"
 JAP_ZAI_RAW_desc:0 "Various Zaibatsu have approached us with raw resource prospects requesting us to fund them. Our funding should give access to much needed rare resources."
-JAP_ZAI_SCI:0 "Zaibatsu Technological Research"
+JAP_ZAI_SCI:0 "재벌의 기술 연구"
 JAP_ZAI_SCI_desc:0 "State funds would go a long way to ensuring that skilled Zaibatsu scientists have everything they need to push Japan forward into the future, and should give the government greater control over research priorities."
 
 ### Focuses - Economic - Nationalisation ###
