--- a/Kaiserreich Korean Translation/localisation/KR_Serbia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Serbia_l_english.yml
@@ -22,19 +22,19 @@ SER_mobilisation_of_the_masses_idea_desc:0 "A part of general Mihailović's stra
 SER_bunker_focus_idea:0 "벙커 중점"
 SER_building_ships_faster:0 "조선소 중점"
 SER_building_ships_faster_desc:0 "By focusing our resources we will be able to quickly build us a navy."
-SER_ship_research:0 "Funded Naval Research"
-SER_occupation_of_bulgaria_idea:0 "Occupation of Bulgaria"
+SER_ship_research:0 "자금지원된 해군 연구"
+SER_occupation_of_bulgaria_idea:0 "불가리아 점령"
 SER_occupation_of_bulgaria_idea_desc:0 "The occupation of Bulgaria is a costly affair since the population is very opposed to us."
 
 ### Opinion Modifiers ###
-SER_orthodox_state_religion:0 "Orthodox state religion"
-SER_modern_and_secular:0 "Secularised"
-SER_orthodox_government:0 "Orthodox government"
+SER_orthodox_state_religion:0 "정교회 신앙"
+SER_modern_and_secular:0 "세속화됨"
+SER_orthodox_government:0 "정교회"
 SER_sold_ship_to_us:0 "Sold us our new flagship"
-SER_refused_to_sell_ship:0 "Refused to sell us a battlecruiser"
+SER_refused_to_sell_ship:0 "전투순양함 판매를 거부함"
 
 ### Tooltips ###
-founded_belgradepact:0 "베오그라드 조약을 창설함"
+founded_belgradepact:0 "베오그라드 조약기구를 창설함"
 absolute_monarchy:0 "Created an absolute monarchy"
 constitutional_monarchy:0 "Created a constitutional monarchy"
 SER_heavy_fighter_bonus:0 "Heavy Fighter models"
@@ -48,7 +48,7 @@ balkan_war_started:0 "The Fourth Balkan War has started"
 ### Government ###
 
 ### Regent ###
-SER_keep_regent:0 "섭정을 지속"
+SER_keep_regent:0 "섭정 지속"
 SER_keep_regent_desc:0 "Petar Bojović has been regent of Serbia for almost a decade. So far he had to continue his rule to prevent Austrian aggression. With the Ausgleich happening in Austria, there are calls to install Crown Prince Alexander as king. However, citing a need for continuing stability, Bojović can extend his rule as regent."
 SER_strengthen_regent_rule:0 "섭정 통치 강화"
 SER_strengthen_regent_rule_desc:0 "Crown Prince Alexander is still very popular in Serbia and the decision of Bojović to continue his rule as Regent is not universally liked. The Regent needs to strengthen his rule by compromising with various political groups and influential figures."
@@ -56,21 +56,21 @@ SER_larger_army_role:0 "Larger Army Role"
 SER_larger_army_role_desc:0 "The Regent of Serbia has close ties with several leading army figures such as Milan Nedić and Draža Mihailović. The army needs to be given a larger role in the government, so they can ensure the survival of it from threats both domestic and foreign."
 
 ### King ###
-SER_crown_the_king:0 "왕을 선출"
+SER_crown_the_king:0 "왕 선출"
 SER_crown_the_king_desc:0 "Petar Bojović has been regent of Serbia for almost a decade. So far he had to continue his rule to prevent Austrian aggression. With the Ausgleich happening in Austria, there is finally a chance to install Alexander, former Crown Prince of Serbia, as the new King. The king will still have to decide whether to rule as an autocrat or to establish a constitutional monarchy."
 SER_absolutism:0 "전제주의"
 SER_absolutism_desc:0 "Now that the king has been restored, the best course of action is to rule as an autocrat, leaving little room for opposition. Serbia is in a precarious position and strong leadership is needed."
 SER_monument_to_the_unknown_hero:0 "Monument to the Unknown Hero"
 SER_monument_to_the_unknown_hero_desc:0 "The construction of a monument to the Unknown Hero will be ordered by King Alexander II of Serbia, to commemorate the victims of the Weltkrieg. Marked only by the dates 1912-1918, the monument also commemorates those lost in the Balkan Wars. The monument is designed by the renowned sculptor Ivan Mestrovic."
-SER_glory_to_the_king:0 "Glory to the King"
+SER_glory_to_the_king:0 "폐하에게 영광을"
 SER_glory_to_the_king_desc:0 "King Alexander will lead us to victory in the conflicts to come. His leadership will ensure the survival of the Serbian state and will help to propel us to a leading position on the Balkans."
-SER_a_strong_state:0 "A Strong State"
+SER_a_strong_state:0 "강한 국가"
 SER_a_strong_state_desc:0 "A strong state apparatus is needed to defend Serbia from all enemies that are plotting its downfall. Every Serbian must be reminded of its duty to its fatherland."
-SER_constitutionalism:0 "Constitutionalism"
+SER_constitutionalism:0 "입헌군주제"
 SER_constitutionalism_desc:0 "With the rule of the king restored, we can limit his powers to create a constitutional monarchy. The past has proven that the downfall of autocratic rulers is inevitable. Democratic elections will ensure the survival of our state."
-SER_free_society:0 "A Free Society"
+SER_free_society:0 "자유 사회"
 SER_free_society_desc:0 "The new Serbia is a free society, where everyone is allowed to express their opinions and to partake in the democratic process. This results in people who are more willing to do their duty to the country."
-SER_private_companies:0 "Encourage Private Companies"
+SER_private_companies:0 "사기업 장려"
 SER_private_companies_desc:0 "We need to encourage people to start small businesses to help the economy. Private companies should be allowed more freedom to operate."
 
 ### Republic ###
@@ -140,11 +140,11 @@ SER_industry:0 "산업 중점"
 SER_industry_desc:0 "We need to push for a modern industrial complex in order to challenge other advanced nations."
 SER_expand_bor_mining_complex:0 "Expand Bor Mining Complex"
 SER_expand_bor_mining_complex_desc:0 "As a part of our industrialisation program, a new larger pit has to be opened at the Bor mining complex. This expansion and modernisation of our production capacities will help to support our growing industry."
-SER_war_industry:0 "War Industry"
+SER_war_industry:0 "전시산업"
 SER_war_industry_desc:0 "We need a larger war industry to support our military."
-SER_invest_in_railroads:0 "Invest in Railroads"
+SER_invest_in_railroads:0 "철도 투자"
 SER_invest_in_railroads_desc:0 "Good transportation is important for both our industry and agricultural sector. We need to invest in the railroad network to enable quick supply of factories."
-SER_extra_research_slot:0 "Military-Industrial Cooperation"
+SER_extra_research_slot:0 "군사-산업 협력"
 SER_extra_research_slot_desc:0 "With our new economic policy in place, the state can start collaborating with large industrial companies to expand our research in different directions."
 
 ### Army Reform ###
@@ -160,7 +160,7 @@ SER_army_tactics_nedic:0 "New Army Tactics"
 SER_army_tactics_nedic_desc:0 "We need to modernise our army tactics in order to be victorious in future conflicts."
 SER_armour_effort:0 "Armour Effort"
 SER_armour_effort_desc:0 "The Weltkrieg showed that armoured vehicles will be important on the battlefield of the future. We need to make sure we have the best designs available."
-SER_patriotic_spirit:0 "Patriotic Spirit"
+SER_patriotic_spirit:0 "애국 정신"
 SER_patriotic_spirit_desc:0 "Every Serbian needs to be reminded of its duty to our country. We can call on all patriots to defend and expand our borders."
 
 ### Mihailovic ###
@@ -178,23 +178,23 @@ SER_mobilisation_of_the_masses:0 "Mobilisation of the Masses"
 SER_mobilisation_of_the_masses_desc:0 "A part of general Mihailović's strategy is the mobilisation of all people in our country. Peasants can defend their farms, citizens their towns. This will become an entirely new type of warfare and will ensure that we are always victorious."
 
 ### Air Force ###
-SER_expand_air_force:0 "Expand the Air Force"
+SER_expand_air_force:0 "공군 확장"
 SER_expand_air_force_desc:0 "Serbia possesses a small airforce, but we need to make it large so that we are the masters in our own sky."
-SER_fighter_focus:0 "Fighter Focus"
+SER_fighter_focus:0 "전투기 중점"
 SER_fighter_focus_desc:0 "The focus of the expansion of our air force should first and foremost be on our fighters. If we can't protect our own skies, we can't even start to think of invading the enemy's."
-SER_bomber_focus:0 "Bomber Focus"
+SER_bomber_focus:0 "폭격기 중점"
 SER_bomber_focus_desc:0 "The expansion of our air force should focus on the bombers. Without good bombers to bomb the enemy from the sky our air force is useless."
-SER_air_tactics:0 "New Air Tactics"
+SER_air_tactics:0 "신 항공 전술"
 SER_air_tactics_desc:0 "With our expanded air force, we can develop new tactics to be used in air combat."
-SER_cas_effort:0 "CAS Effort"
+SER_cas_effort:0 "근접지원전투기 개발"
 SER_cas_effort_desc:0 "To support our troops in their offensives, we should invest in more modern Close Air Support."
-SER_heavy_fighter_focus:0 "Heavy Fighter Effort"
+SER_heavy_fighter_focus:0 "중전투기 개발"
 SER_heavy_fighter_focus_desc:0 "Bombers that operate far behind the frontline should have proper protection. We need to invest in modern heavy fighters which have a longer range."
-SER_expand_airfields:0 "Expand Airfields"
+SER_expand_airfields:0 "비행장 확장"
 SER_expand_airfields_desc:0 "We need to expand existing airfields and create new ones to accommodate our larger air force."
-SER_rocket_effort:0 "Rocket Effort"
+SER_rocket_effort:0 "로켓 중점"
 SER_rocket_effort_desc:0 "Some interesting developments have been made in other countries in the last years. We need to keep up and look at advances in rocket and jet technology."
-SER_paratrooper_effort:0 "Paratrooper Effort"
+SER_paratrooper_effort:0 "공수부대 개발"
 SER_paratrooper_effort_desc:0 "We need to establish a paratrooper corps which we can use to seize strategic locations behind the frontline."
 
 ### Navy ###
@@ -297,20 +297,20 @@ serbia.7.a:0 "The Democratic Party will bring liberal values to Serbia."
 serbia.7.b:0 "The People's Radical Party scores a landslide!"
 serbia.7.c:0 "The army shall put an end to this chaotic democracy."
 
-serbia.8.t:0 "The [GetYear] parliamentary elections"
+serbia.8.t:0 "[GetYear]년 의회 선거"
 serbia.8.d:0 "According to the Constitution, elections are to be held every four years. The term of the current National Assembly has expired and the time has come to elect a new National Assembly. There are 120 seats available in the National Assembly and various political parties have begun their campaigns. But currently only two parties have a chance of gaining a majority and thus forming a new government. Which one shall prevail?"
 serbia.8.a:0 "The Democratic Party wins."
 serbia.8.b:0 "The People's Radical Party prevails."
 
-serbia.9.t:0 "The [GetYear] elections"
+serbia.9.t:0 "[GetYear]년 선거"
 serbia.9.d:0 "According to the Constitution, elections are to be held every four years. The term of the current National Assembly has expired and the time has come to elect a new National Assembly. There are 120 seats available in the National Assembly and various political parties have begun their campaigns. But currently only two parties have a chance of gaining a majority and thus forming a new government. Which one shall prevail?"
 serbia.9.a:0 "The Democratic Party wins."
 serbia.9.b:0 "The People's Radical Party prevails."
 serbia.9.c:0 "The army puts an end to this chaotic democracy!"
 
-serbia.10.t:0 "The King has died"
+serbia.10.t:0 "왕이 서거했습니다"
 serbia.10.d:0 "Alexander II, our king, has died in his sleep. A week of mourning has been declared, and his son Peter has assumed the throne."
-serbia.10.a:0 "Long live Peter II!"
+serbia.10.a:0 "피터 2세여 만수무강하소서!"
 
 serbia.11.t:0 "Crown Prince Alexander has died"
 serbia.11.d:0 "The son of Peter I, our King during the Weltkrieg, Alexander, has died in his sleep. His son Peter has become the head of the Karađorđević house."
