--- a/Kaiserreich Korean Translation/localisation/KR_Carribean_Federation_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Carribean_Federation_l_english.yml
@@ -10,15 +10,15 @@ CAF_social_conservative_party:0 "PU"
 CAF_authoritarian_democrat_party:0 "PU"
 CAF_paternal_autocrat_party:0 "MJ"
 CAF_national_populist_party:0 "MJ"
-CAF_radical_socialist_party_long:0 "Syndicalist Progressive Movement"
-CAF_syndicalist_party_long:0 "Syndicalist Progressive Movement"
-CAF_social_democrat_party_long:0 "Social Democratic Party"
-CAF_social_liberal_party_long:0 "Liberal Party"
-CAF_market_liberal_party_long:0 "Liberal Party"
-CAF_social_conservative_party_long:0 "Patriotic Union"
-CAF_authoritarian_democrat_party_long:0 "Patriotic Union"
-CAF_paternal_autocrat_party_long:0 "Military Junta"
-CAF_national_populist_party_long:0 "Military Junta"
+CAF_radical_socialist_party_long:0 "생디칼리즘 진보 운동"
+CAF_syndicalist_party_long:0 "생디칼리즘 진보 운동"
+CAF_social_democrat_party_long:0 "사회민주당"
+CAF_social_liberal_party_long:0 "자유당"
+CAF_market_liberal_party_long:0 "자유당"
+CAF_social_conservative_party_long:0 "애국 동맹"
+CAF_authoritarian_democrat_party_long:0 "애국 동맹"
+CAF_paternal_autocrat_party_long:0 "군부"
+CAF_national_populist_party_long:0 "군부"
 
 ### Events ###
 caf.1.t:0 "The Trinidad oil fields"
